--- a/templates/about.html
+++ b/templates/about.html
@@ -66,16 +66,16 @@
             <div class="row">
                 <div class="col-lg-6 mb-4 wow fadeInLeft">
                     <div class="pad-sec">
-                        <h2 class="subhead-small-blk">We are Span Global Services</h2>
+                        <h2 class="subhead-small-blk">We are Affluence Business Inc</h2>
                         <p>We are niche pioneers of business accelerating data intelligence, data consultancy and
                             data-driven services, for industries and verticals that target rapid revenue goals. We make
                             business sustainability and growth utopia - a sure-*shot reality*!</p>
-                        <p>Span Global Services has incubated ground-breaking data solutioning, IT-integration and
+                        <p>Affluence Business Inc has incubated ground-breaking data solutioning, IT-integration and
                             data-driven marketing processes for some of the top technology firms of the world. </p>
                         <p>Our sophisticated data gamut also forays into business insights, market reports and IT
                             support services - so that your business can focus on its ascent without forked
                             distractions. </p>
-                        <p>Span Global Services is a unit of the Champions Group conglomerate. </p>
+                        <p>Affluence Business Inc is a unit of the Champions Group conglomerate. </p>
                         <div class="mb-4 mt-4"> <a href="/contact-us/"
                                 class="dgreen-btn circle-fa">Talk to us &nbsp; <i
                                     class="fa icon ion-android-arrow-forward"></i></a> </div>
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-lg-6 mb-4 wow fadeInLeft">
                     <h2 class="subhead-small-blk">Our Vision</h2>
-                    <p>Span Global Services believes in the ramifications of informed decisions, that are backed by
+                    <p>Affluence Business Inc believes in the ramifications of informed decisions, that are backed by
                         painstaking Data.</p>
                     <p>We help clients scale their marketing investments by enriching them with hyper-focused audience
                         data. Our services are cost-efficient for both small and large enterprises. We believe in
@@ -336,7 +336,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=""
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value="">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
