--- a/templates/b2b-email-list.html
+++ b/templates/b2b-email-list.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7 section-fpad wow fadeInLeft">
-          <h2 class="subhead-small-blk" style="margin-top:-10px;">Let Span Global Services Escort Your Business Towards
+          <h2 class="subhead-small-blk" style="margin-top:-10px;">Let Affluence Business Inc Escort Your Business Towards
             the Path of Incontestable Success!</h2>
           <p style="text-align:Justify;">The digital era has called for a paradigm shift in marketing’s quintessential
             methods. One of the most sought-after ways of new-age marketing includes B2B emailing. Wordstream’s recent
@@ -69,7 +69,7 @@
           <p style="text-align:Justify;">Businesses are now focusing all their attention on generating useful B2B
             marketing leads. Why? Because sending out a <strong>Cold Email Blast</strong> to a homegrown list of
             contacts is not only unfulfilling but unforgivingly detrimental to your time and budget. </p>
-          <p style="text-align:Justify;">By partnering with Span Global Services, those worries won’t be shoveling you
+          <p style="text-align:Justify;">By partnering with Affluence Business Inc, those worries won’t be shoveling you
             into a corner. Our <strong>B2B Email Lists</strong> house isochronally-appended and <a
               href="/data-enrichment-services/" title="Enriched Data"><strong>enriched data</strong></a>. Therefore,
             your business marketing strategies can hit the road to success with our pre-verified mailing lists, sans
@@ -120,7 +120,7 @@
                 <form name="f12" id="contact-form" action="/scripts/formmail" method="post"
                   onSubmit="return validationcon()">
                   <input type="hidden" name="returnURL" value="/thanks">
-                  <input name="title" type="hidden" value="Contact Request from Span Global Services">
+                  <input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
                   <div class=" form-row">
@@ -629,7 +629,7 @@
               class="respo-img mb-3"></a>
         </div>
         <div class="col-lg-6 pt-5 pb-5 mt-3 wow fadeInLeft mb-sec">
-          <h2 class="subhead-small-blk mb-sec">We at Span Global Take Pride in Delivering Quality over Quantity</h2>
+          <h2 class="subhead-small-blk mb-sec">We at Affluence Business Inc Take Pride in Delivering Quality over Quantity</h2>
 
           <p style="text-align:Justify;">The market’s appetite for B2B prospect databases has skyrocketed. The most
             logical outcome of the status quo is the emanation of numerous firms that offer mailing list services. It is
@@ -653,7 +653,7 @@
         <div class="col-lg-12 wow fadeInLeft mb-sec">
 
           <h2 class="subhead-small-blk mb-sec">Unleash Limitless Marketing Possibilities with Top-Notch Data Solutions
-            from Span Global Services</h2>
+            from Affluence Business Inc</h2>
           <p style="text-align:Justify;">In Stephen. R. Covey’s words, “The key is in not spending time, but investing
             in it”. The same formula applies to resources, and in this case, B2B email lists. Thus, the key to achieving
             masterstrokes of marketing wins is to invest in <a href="/email-lists"
@@ -663,20 +663,20 @@
             business professionals and other prospects. These connections have enough potential to give your business
             the much-needed push and thereby puts your firm on the fast track to successful campaigning.</p>
           <p style="text-align:Justify;">As evident, <strong>B2B Mailing Lists</strong> form a vital cornerstone in
-            yielding the success your business deserves, and we strive to furnish that precisely. At Span Global
+            yielding the success your business deserves, and we strive to furnish that precisely. At Affluence Business Inc
             Services, our mailing databases are regularly updated and made relevant for marketing and branding needs.
             Our CAN-SPAM compliant emailing lists undergo rigorous data cleansing to guarantee invaluable clients like
             you are provided with high-quality data. </p>
           <p style="text-align:Justify;">Irrespective of the mode of communication and the geographical location you
             choose, our data solutions guarantee 95-98% campaign deliverability.</p>
           <p style="text-align:Justify;">Discovering potent businesses and connecting with them is now easier than ever!
-            Get in touch with <a href=/ title="Span Global Services"><strong>Span
+            Get in touch with <a href=/ title="Affluence Business Inc"><strong>Span
                 Global Services</strong></a> today to experience excellence blended with credibility! So, what are you
             waiting for? Subscribe to the B2B email lists from our data data repositories right away and up your
             marketing game! </p>
           <h2 class="subhead-small-blk">Take Your Business from Ambiguity to Certainty by Procuring the Right Contact
             Data </h2>
-          <p style="text-align:Justify;">Span Global Services’ <strong>B2B Database</strong> covers contact information
+          <p style="text-align:Justify;">Affluence Business Inc’ <strong>B2B Database</strong> covers contact information
             that will help you conduct multi-channel campaigning transcending all boundaries of geography, industry,
             even job titles. With us, you can target over 120 industries from different spheres. Take a look –</p>
 
@@ -957,7 +957,7 @@
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
                 action=" " enctype="multipart/form-data">
-                <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+                <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
                 <input name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group">
