--- a/templates/data-append/b2b-email-appending.html
+++ b/templates/data-append/b2b-email-appending.html
@@ -106,7 +106,7 @@
                         <p>Help us serve you better! Fill out the details in the form below</p>
                         <p>and let our representatives guide you through the b2b email appending process!</p>
                         </h3>
-                        <p>To combat this business challenge the most convenient and non-risky way is to go for timely and continuous <strong>b2b email appending services</strong> from Span Global Services. With approximately 3-6% email addresses of business
+                        <p>To combat this business challenge the most convenient and non-risky way is to go for timely and continuous <strong>b2b email appending services</strong> from Affluence Business Inc. With approximately 3-6% email addresses of business
                             executive decays on a monthly basis, <strong>b2b email appending services</strong> ensures that all non-accurate email ids are replaced with valid ones!</p>
                         <div class="row sicon">
                             <div class="col-lg-4 mb-4 ">
@@ -149,7 +149,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="/append-maile/r" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action="/append-maile/r" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8 section-fpad wow fadeInLeft">
-                        <p>At Span Global Services we try to deliver updated and appended b2b databases in the shortest span of time. But how do we carry out this entire process of <strong>b2b email appending</strong>? Let's have a glimpse of the steps here:</p>
+                        <p>At Affluence Business Inc we try to deliver updated and appended b2b databases in the shortest span of time. But how do we carry out this entire process of <strong>b2b email appending</strong>? Let's have a glimpse of the steps here:</p>
                         <ul>
                             <li>The <strong>b2b email appending services</strong> commences with collecting the obsolete <a href="/b2b-email-list/" title="B2B Email Database"><strong>b2b email database</strong></a> from our
                                 clients.</li>
@@ -236,9 +236,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 wow fadeInLeft">
-                        <h2 class="subhead-small-blk">How does Span Global Services excel at B2B Email Append?</h2>
+                        <h2 class="subhead-small-blk">How does Affluence Business Inc excel at B2B Email Append?</h2>
                         <p>There is a stiff competition in the market today, so it's very important to get proper resources to build audience engaging promotions. Nowadays organizations are realizing the importance of getting their email databases updated
-                            regularly, that's why Span Global Services brings world-class <strong>b2b email append services</strong> for marketers to be able to take their digital and online campaigns to the right masses without bothering about email
+                            regularly, that's why Affluence Business Inc brings world-class <strong>b2b email append services</strong> for marketers to be able to take their digital and online campaigns to the right masses without bothering about email
                             bounces or spam! There are many reasons for us to believe that our services for <strong>b2b email address append</strong> are state of the art. They are:</p>
                         <div class="space-list">
                             <ul>
@@ -269,7 +269,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
