--- a/templates/data-append/b2c-email-appending.html
+++ b/templates/data-append/b2c-email-appending.html
@@ -43,7 +43,7 @@
                             <li>Very prone to change email addresses and other contact information and hence requires regular updates</li>
                             <li>Most marketers have their <strong>b2c customer data</strong> in non-digital format which makes it very cumbersome to access</li>
                         </ul>
-                        <p>So what's the way out? The answer lies in <strong>b2c email append service</strong> from Span Global Services! An exclusive, result oriented service offered, that ensures that obsolete marketing databases get updated with fresh
+                        <p>So what's the way out? The answer lies in <strong>b2c email append service</strong> from Affluence Business Inc! An exclusive, result oriented service offered, that ensures that obsolete marketing databases get updated with fresh
                             and <a href="/email-lists/" title="Marketing Databases"><strong>deliverable email addresses</strong></a>, simply by matching it with an in-house master database through manual and automated
                             processes.
                         </p>
@@ -88,7 +88,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action="" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -163,11 +163,11 @@
                 <div class="row">
                     <div class="col-lg-4 mb-4 wow fadeInLeft">
                         <div class="dark-green ">
-                            <h2>Excellence promised with Span Global Services' B2C Email Appending</h2>
+                            <h2>Excellence promised with Affluence Business Inc' B2C Email Appending</h2>
                         </div>
                     </div>
                     <div class="col-lg-8 section-fpad wow fadeInLeft">
-                        <p>At Span Global Services we guarantee excellence and deliverable databases with every purchase. Our clients are valuable to us and we place high importance on their satisfaction and the quality of data delivered!</p>
+                        <p>At Affluence Business Inc we guarantee excellence and deliverable databases with every purchase. Our clients are valuable to us and we place high importance on their satisfaction and the quality of data delivered!</p>
                         <p>Since the b2c market has shifting customer loyalty, we ensure that we get our email lists updated regularly, through manual and automated processes so that no detail is missed. All missing ids are filled in, misspellings are corrected
                             and new customer ids are added, to enlarge your b2c email database effortlessly!</p>
                         <p>So leave behind your worries about bounced emails and inability to reach globally targeted audiences. Trust us for business to customer email appending and leave the rest to us!</p>
@@ -188,7 +188,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
