--- a/templates/data-append/contact-appending.html
+++ b/templates/data-append/contact-appending.html
@@ -104,7 +104,7 @@
                         <h2 class="subhead-small-blk">Contact Appending Services</h2>
                         <p><strong>How to prospect to various decision makers within an organization</strong></p>
                         <p>Contact appending adds multiple contacts of key decision makers within an organization. In this way you gain a comprehensive list of contacts with their current titles, providing you with information on the best person to contact.</p>
-                        <p>With organizational structure changing frequently, keeping track of changing titles and job roles is a challenge. <a href="/" title="Span Global Services"><strong>Span Global Services</strong></a>                            has current information about contact details of various titles within an organization. With our <strong>contact appending services</strong> you can gain:</p>
+                        <p>With organizational structure changing frequently, keeping track of changing titles and job roles is a challenge. <a href="/" title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a>                            has current information about contact details of various titles within an organization. With our <strong>contact appending services</strong> you can gain:</p>
                         <ul class="space-list">
                             <li>A wider market within the same company</li>
                             <li>Establish new connections </li>
