--- a/templates/data-append/tech-installs-append.html
+++ b/templates/data-append/tech-installs-append.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
                         <h2 class="subhead-small-blk">Tech Install Append</h2>
-                        <p><strong>Opt-in Tech Install Appending Services From Span Global Services</strong></p>
+                        <p><strong>Opt-in Tech Install Appending Services From Affluence Business Inc</strong></p>
                         <p>Now, seamlessly connect with the pulse of your technology market. Discover the solutions, products and solutions <strong>Top B2B companies</strong> are looking for.</p>
                         <p><strong>Technology appending</strong> service is for businesses in the look-out for a deeper understanding of technologies by overlaying Frimographic information.</p>
                         <h2 class="normal-head">Trigger best possible campaign responses through an accurate list of companies using a particular technology.</h2>
@@ -73,7 +73,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -139,7 +139,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
