--- a/templates/data-intelligence.html
+++ b/templates/data-intelligence.html
@@ -61,11 +61,11 @@
                     <h2 class="subhead-small-blk">Data Intelligence Services</h2>
                     <h3 class="normal-head">Power up your marketing with our data intelligence solutions</h3>
                     <p>As a B2B marketer, if you want to stay ahead of your competitors and expand your B2B network then you should not limit your promotional activities within the boundary of traditional marketing methodologies. You need to keep track of
-                        every beat of this dynamic market and the contemporary marketing trends. At Span Global Services, we help businesses in market expansion and amplifying ROI by providing highly-responsive, yet affordable marketing intelligence solutions.
+                        every beat of this dynamic market and the contemporary marketing trends. At Affluence Business Inc, we help businesses in market expansion and amplifying ROI by providing highly-responsive, yet affordable marketing intelligence solutions.
                         Are you ready for that?</p>
                     <h3 class="normal-head">Reach the perfect audience with our marketing intelligence services</h3>
                     <p>When marketers are busy planning their marketing strategies and campaign budget, they usually miss out on one yet the most important factor - using the right business database. It is a must to use authentic data, as it forms the foundation
-                        of every marketing campaign. With people changing jobs, houses, email addresses and interests frequently, keeping track is getting tougher for marketers. At Span Global Services, we offer cost-effective Data Intelligence Solutions
+                        of every marketing campaign. With people changing jobs, houses, email addresses and interests frequently, keeping track is getting tougher for marketers. At Affluence Business Inc, we offer cost-effective Data Intelligence Solutions
                         to keep your data up-to-date to get optimum results and improve revenues generation. Translate data into actionable insights with our solutions:</p>
                     <div class="row">
                         <div class="col-lg-4 wow fadeInLeft">
@@ -104,7 +104,7 @@
                             <h4>REQUEST<br/> A CALL BACK NOW</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -151,7 +151,7 @@
                     <div>
                         <h2 class="subhead-small-blk">Trust our Data Marketing Services for Saving Time and Resource</h2>
                         <p>With data demanding a close watch, and its importance increasing every day, it is essential to ensure that all the data that you have procured or rented, needs to be maintained efficiently. As with many companies, it is an arduous
-                            task to do the same. Collaborating with a data services provider such as Span Global Services allows you with a larger bandwidth of services, coupled with expertise and precise knowledge that is hard to come by. Be it list
+                            task to do the same. Collaborating with a data services provider such as Affluence Business Inc allows you with a larger bandwidth of services, coupled with expertise and precise knowledge that is hard to come by. Be it list
                             management that involves list building or email lists, or data management in general, we will assist you with everything.</p>
                     </div>
                 </div>
@@ -186,8 +186,8 @@
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services offers <strong>Data Intelligence solutions</strong> to keep data up-to-date for optimum campaign results. To help us manage your data with suitable data intelligence solutions, write
-                                                    to us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a> or call on 877 837- 4884.</p>
+                                                <p>Affluence Business Inc offers <strong>Data Intelligence solutions</strong> to keep data up-to-date for optimum campaign results. To help us manage your data with suitable data intelligence solutions, write
+                                                    to us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a> or call on 307-213-7098.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -199,18 +199,18 @@
                                         </div>
                                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Business data demands a close watch and at Span Global Services we ensure that your data will remain scrupulous and well maintained. Data Intelligence gains prominence with people changing jobs and email
+                                                <p>Business data demands a close watch and at Affluence Business Inc we ensure that your data will remain scrupulous and well maintained. Data Intelligence gains prominence with people changing jobs and email
                                                     addresses frequently. This reiterates the need to keep data up-to-date for optimal results.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header" id="headingfour">
-                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i> Is Span Global Services Data Intelligence worth it?</button> </h2>
+                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i> Is Affluence Business Inc Data Intelligence worth it?</button> </h2>
                                         </div>
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Yes, the Data Intelligence Services offered by Span Global Services are worth the investment. It offers a larger bandwidth of services and expertise that is unparalleled. You may call on 877 837- 4884 to
+                                                <p>Yes, the Data Intelligence Services offered by Affluence Business Inc are worth the investment. It offers a larger bandwidth of services and expertise that is unparalleled. You may call on 307-213-7098 to
                                                     know more about the services.</p>
                                             </div>
                                         </div>
@@ -235,7 +235,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
