--- a/templates/email-appending.html
+++ b/templates/email-appending.html
@@ -46,7 +46,7 @@
                             title="Email Database"><strong>email database</strong></a> in minimum time to market and provide you with the latest email address data of your targeted decision makers and marketing professionals.</p>
                     <p style="text-align:Justify;">The future of B2B marketing communication seems to be immensely bright. Several trends such as globalization, continuous investments in research and development, newer techniques of multi-channel communication, product proliferation,
                         and audience engagement through personalized content are the key drivers for B2B markers in <a href="/lead-generation/" title="Lead Generation"><strong>lead generation</strong></a>.</p>
-                    <p style="text-align:Justify;">But most B2B marketers fail to leverage from these avenues as they don’t have access to the right email data. Buy an email list from Span Global Services or <strong>append your email data</strong> file with us. Revamp your list to
+                    <p style="text-align:Justify;">But most B2B marketers fail to leverage from these avenues as they don’t have access to the right email data. Buy an email list from Affluence Business Inc or <strong>append your email data</strong> file with us. Revamp your list to
                         make the most out of present market opportunities. </p>
                     <h2 class="subhead-small-blk">Our Niche Appending Services Includes:</h2>
                     <div class="row respo-icon">
@@ -88,7 +88,7 @@
                             <h4>Free Append Test</h4>
                             </br>
                             <div class="form">
-                                <form name="f20" id="contact-form" action="/append-mailer/" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f20" id="contact-form" action="/append-mailer/" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -135,7 +135,7 @@
                 <div class="col-lg-6 mb-2 wow fadeInLeft ">
                     <div class="email-list-style">
                         <h2 class="subhead-small-blk mb-sec">Revamp Your List to Make the Most Out of Present Market Opportunities</h2>
-                        <p style="text-align:Justify;">Span Global Services’ segmented master list will help you with updated details on the active and prospective email accounts. With the <strong>best email addresses appending service</strong> in the industry, we will help you tailor
+                        <p style="text-align:Justify;">Affluence Business Inc’ segmented master list will help you with updated details on the active and prospective email accounts. With the <strong>best email addresses appending service</strong> in the industry, we will help you tailor
                             your marketing strategies to reach the right audience and achieve higher sales. </p>
                         <p style="text-align:Justify;">So partner with us and prospect with your targets with channelized campaigns to foster global growth.</p>
                         <p> Here is how we can help you meet your campaign objectives.</p>
@@ -181,7 +181,7 @@
                     <h2 class="subhead-small-blk">How does Email Appending work?</h2>
                     <p style="text-align:Justify;">Why wait any longer? Spark up your marketing campaigns with the most actionable <strong>email append solutions &amp; acquire qualified email leads</strong> that boost your sales revenue. Put a rocket under your campaign growth plan
                         by using data that get your email campaigns delivered to the right inboxes.</p>
-                    <p style="text-align:Justify;">We will help design your marketing strategies to reach the right market segment and achieve higher sales effortlessly. Give your marketing a competitive edge by opting for Span Global Services’ highly responsive marketing intelligence
+                    <p style="text-align:Justify;">We will help design your marketing strategies to reach the right market segment and achieve higher sales effortlessly. Give your marketing a competitive edge by opting for Affluence Business Inc’ highly responsive marketing intelligence
                         solutions.</p>
                 </div>
                 <div class="col-sm-6 text-center "> <img src="/static/assets/img/Email-Append-Process.jpg" alt="Email Appending Process" class="respo-img " />
@@ -317,7 +317,7 @@
                     </div>
                     <p style="text-align:Justify;">A good marketer always plans campaigns based on statistical data, research and analytics. Research is something that you cannot ignore while executing campaigns for your audience. You need to know them first.</p>
                     <p style="text-align:Justify;">Developing personalized email content is only possible if you know your prospective customers well and understand their purchase behaviors. But sending personalized emails will not bring any result if you don’t have the right email
-                        addresses to use. And this is where Span Global Services will help you with a cost-effective <strong>email list appending</strong> of all kinds. </p>
+                        addresses to use. And this is where Affluence Business Inc will help you with a cost-effective <strong>email list appending</strong> of all kinds. </p>
                 </div>
             </div>
         </div>
@@ -333,9 +333,9 @@
                 <div class="col-lg-7 wow fadeInLeft">
                     <p style="text-align:Justify;">To increase customer base, one requires an effective multichannel marketing effort. If you want to promote your brand through multi-channel marketing you can get a compact business mailing list from us to empower your campaigns. We
                         will provide you with updated &amp; responsive contact lists segmented in multiple fields - such as full names, email addresses, direct phone numbers, social media profile details etc.</p>
-                    <p>But purchasing email lists often strains the budget. In that case, we suggest you go for appending your emails. With Span Global Services, you can upgrade your marketing data for better targeting &amp; run efficient campaigns to get
+                    <p>But purchasing email lists often strains the budget. In that case, we suggest you go for appending your emails. With Affluence Business Inc, you can upgrade your marketing data for better targeting &amp; run efficient campaigns to get
                         better visibility in the global B2B market Space.</p>
-                    <p style="text-align:Justify;">So hurry up and step up your revenue with Span Global Services' opt-in & deliverable <strong><a href="/b2b-email-appending">B2B email appending services</a></strong>. We know that it is
+                    <p style="text-align:Justify;">So hurry up and step up your revenue with Affluence Business Inc' opt-in & deliverable <strong><a href="/b2b-email-appending">B2B email appending services</a></strong>. We know that it is
                         a highly competitive world out there and we have companies willing to append your contacts at throwaway prices. We, on the other hand, aim to stay ahead of the competition by providing email contact data that is not only accurate
                         but also highly responsive and deliverable. So make the smart move now and improve your brand visibility worldwide.</p>
                 </div>
@@ -370,7 +370,7 @@
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services offers unmatched <strong>email appending services</strong> like B2B email appending, reverse email appending, telephone appending and contact appending to list a few. Our <strong>email appending</strong>                                                    best practices help marketers to connect with key decision makers and professionals </p>
+                                                <p>Affluence Business Inc offers unmatched <strong>email appending services</strong> like B2B email appending, reverse email appending, telephone appending and contact appending to list a few. Our <strong>email appending</strong>                                                    best practices help marketers to connect with key decision makers and professionals </p>
                                             </div>
                                         </div>
                                     </div>
@@ -387,7 +387,7 @@
                                     </div>
                                     <div class="card">
                                         <div class="card-header" id="headingfour">
-                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i> What is unique about Email Appending at Span Global Services?</button> </h2>
+                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i> What is unique about Email Appending at Affluence Business Inc?</button> </h2>
                                         </div>
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
@@ -398,12 +398,12 @@
                                     </div>
                                     <div class="card">
                                         <div class="card-header" id="headingfive">
-                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefive"><i class="fa fa-plus"></i> Why should I opt for Span Global Services email appending service?</button>                                                </h2>
+                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefive"><i class="fa fa-plus"></i> Why should I opt for Affluence Business Inc email appending service?</button>                                                </h2>
                                         </div>
                                         <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>At Span Global Services we understand the importance of verified <a href="/b2b-email-list/">B2B data</a> and go the extra mile to <strong>append email addresses</strong>.
-                                                    Span Global Services has assisted marketers in the past who have always come back to invest in our <strong>email appending services</strong>. We help marketers leverage business and revamp an existing
+                                                <p>At Affluence Business Inc we understand the importance of verified <a href="/b2b-email-list/">B2B data</a> and go the extra mile to <strong>append email addresses</strong>.
+                                                    Affluence Business Inc has assisted marketers in the past who have always come back to invest in our <strong>email appending services</strong>. We help marketers leverage business and revamp an existing
                                                     list with our impeccable yet affordable email appending services. </p>
                                             </div>
                                         </div>
@@ -498,7 +498,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
@@ -527,7 +527,7 @@
                 <h4 class="modal-title">Get Started with Email Append</h4> <button type="button" class="close" data-dismiss="modal">×</button> </div>
             <div class="modal-body" id="file">
                 <div class="form">
-                    <form name="f7" method="post" action="" enctype="multipart/form-data" onSubmit="javascript:return getCountvalidation();"> <input name="fieldOrder" type="hidden" value="name,email,phone,comments,upload"> <input name="subject" type="hidden" value="Get Count Request from Span Global Services"> <input type="hidden" name="returnURL" value=" ">
+                    <form name="f7" method="post" action="" enctype="multipart/form-data" onSubmit="javascript:return getCountvalidation();"> <input name="fieldOrder" type="hidden" value="name,email,phone,comments,upload"> <input name="subject" type="hidden" value="Get Count Request from Affluence Business Inc"> <input type="hidden" name="returnURL" value=" ">
                         <div class=" form-row">
                             <div class="col-lg-6 form-group">
                                 <div class="input-container"> <input type="text" name="fname1" class="form-control" id="fname1" placeholder="First Name*"> </div>
