--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,12 +23,12 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
-                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a><br /> <strong>Phone :</strong><a href="tel:307-213-7098">307-213-7098</a>                            </p>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
-                        <p> </br><br /> <strong></strong><a href="tel:8777550023"></a> </p>
+                        <p> </br><br /> <strong></strong><a href="tel:307-213-7098"></a>307-213-7098 </p>
                     </div>
-                    <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
+                    <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Affluence Business Inc Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
                         <div class="copyright"> &copy; 2023 Affluences Business inc - <a href="#" >A Champions Group Company</a>, All rights reserved. </div>
                     </div>
@@ -48,7 +48,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="javascript:void(0)" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="javascript:void(0)" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Send Us Your Requirement</h4>
         <div>
           <p>Our growth experts will connect with you to fulfill your needs</p>
@@ -154,7 +154,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Get Free Append Match Test Today!</h4>
       </div>
 
@@ -245,7 +245,7 @@
 
       </div>
       <div class="col-lg-12 text-center modal-sub-header oxy-font">
-        <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
+        <a href="/" alt="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" alt="home" title="home" class="popup-logo" /></a>
         <h4 class="modal-title">Our Top Data Expert is just a click away!</h4>
       </div>
 
@@ -255,7 +255,7 @@
 
           <form name="hpopup" id="home-form" action=" " method="post" onSubmit="return homepopup()">
             <input type="hidden" name="returnURL" value=" ">
-            <input name="title" type="hidden" value="Contact Request from Span Global Services">
+            <input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
             <div class=" form-row">
