--- a/templates/geo-targeted-lists.html
+++ b/templates/geo-targeted-lists.html
@@ -29,9 +29,9 @@
                             identify your target audience based on geography and reach out to them accordingly. Using
                             geo-targeted email marketing lists is a good way to go about your business as it will guide
                             your campaigns to targeted markets. And if you think you are unsure as to where to acquire
-                            the list from, reach us at Span Global Services, and let us help you with the Country wise
+                            the list from, reach us at Affluence Business Inc, and let us help you with the Country wise
                             Professionals email database. </p>
-                        <p style="text-align:Justify;">At Span Global Services we understand that your campaigns need to
+                        <p style="text-align:Justify;">At Affluence Business Inc we understand that your campaigns need to
                             be niche. It needs to be targeted as per country, state, industry and other categories to
                             make sure that your message is reaching its intended prospects. With our mailing list of
                             Geo-targeted professionals we can accordingly support your marketing initiatives with data
@@ -59,7 +59,7 @@
                                         onSubmit="return validationcon()">
 
                                         <input name="title"
-                                            type="hidden" value="Contact Request from Span Global Services">
+                                            type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname"
@@ -139,7 +139,7 @@
                             we aid marketers to connect with executives from across the UK, Europe, APAC, Canada and
                             more. Segmented and suitable for multichannel communications, our lists are a powerful way
                             for you to make new beginnings. </p>
-                        <p style="text-align:Justify;">Contact us today at Span Global Services and let us offer a
+                        <p style="text-align:Justify;">Contact us today at Affluence Business Inc and let us offer a
                             customized geography-based marketing database for b2b campaigns!</p>
                         <div class="mb-5 mt-4"> <a href="/contact-us/"
                                 class="green-btn circle-fa">Request A Quote &nbsp; <i
@@ -517,7 +517,7 @@
                                     onsubmit="return fnValidationContactside()"
                                     action=" "
                                     enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                        value="Contact Details from Span Global Services">
+                                        value="Contact Details from Affluence Business Inc">
 
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname"
