--- a/templates/geo-targeted-lists/australia-business-email-list.html
+++ b/templates/geo-targeted-lists/australia-business-email-list.html
@@ -126,7 +126,7 @@
                                         action=" " method="post"
                                         onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                             value=" "><input name="title"
-                                            type="hidden" value="Contact Request from Span Global Services">
+                                            type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname"
@@ -194,7 +194,7 @@
                         <h2 class="subhead-small-blk mb-2">
                             <h2 class="subhead-small-blk mb-2">Premium Geo-Targeted Australia Business Email Lists for
                                 Maximum Marketing Success</h2>
-                            <p>Span Global Services’ <strong>Australia Business Email List</strong> will help you
+                            <p>Affluence Business Inc’ <strong>Australia Business Email List</strong> will help you
                                 establish a sound business in Australia with a solid client base. We understand how
                                 challenging it can be to avoid getting drowned in a gargantuan pool of competitors. </p>
                             <p>However, fret not! Our data experts will help you stay afloat by compiling a custom
@@ -212,7 +212,7 @@
                             src="/static/assets/img/quality-leads-usa.jpg" class="respo-img"
                             alt="USA Business Email List" /></div>
                     <div class="col-lg-6 mt-3 wow fadeInLeft">
-                        <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Australia Email
+                        <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Australia Email
                             Address List</h2>
                         <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -251,7 +251,7 @@
                             a whole different-level ballgame. <br>Are you just starting out and finding it difficult to
                             navigate your way through tough marketing waters or is yours a situation of failing
                             home-grown mailing lists? Whatever your case may be, you can put down your marketing worries
-                            to rest with Span Global Services. <br>Our thorough and updated <strong>Australia Business
+                            to rest with Affluence Business Inc. <br>Our thorough and updated <strong>Australia Business
                                 Email List</strong> will help you send personalized marketing messages to your audience,
                             surpassing all marketing channels, geographies, industries, and job titles – just let us
                             know your specifications. </p>
@@ -444,12 +444,12 @@
                 <div class="row">
                     <div class="col-lg-5 mb-4 wow fadeInLeft">
                         <div class="dark-green">
-                            <h2>Why Choose Span Global Services as Your Data Partner</h2>
+                            <h2>Why Choose Affluence Business Inc as Your Data Partner</h2>
                         </div>
                     </div>
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
                         <p>Wondering what all you’ve got in store for you when you commit to <a
-                                href=/ title="Span Global Services"><strong>Span
+                                href=/ title="Affluence Business Inc"><strong>Span
                                     Global Services</strong></a> as your data partner for your <strong>Australian
                                 Mailing Database</strong>? Here is an extensive list of the benefits you can expect to
                             receive </p>
@@ -957,7 +957,7 @@
                 <div class="row">
                     <h2 class="subhead-small-blk">How to Procure Your Premium Australia Business Email List </h2>
                     <p>To obtain your robust <strong>Australian Mailing Database</strong>, simply get in touch with the
-                        data experts of Span Global Services and let us know your unique needs – do you wish to go local
+                        data experts of Affluence Business Inc and let us know your unique needs – do you wish to go local
                         or establish a global brand presence, which industry are you aiming to target, which key
                         professionals is your business aiming for, and the likes.</p>
                     <p>Our data scientists will identify the ideal leads from our global master database via proper
@@ -999,7 +999,7 @@
                                     onsubmit="return fnValidationContactside()"
                                     action=" "
                                     enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                        value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                        value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                         type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname"
