--- a/templates/geo-targeted-lists/canada-business-email-list.html
+++ b/templates/geo-targeted-lists/canada-business-email-list.html
@@ -31,7 +31,7 @@
                               alarming rate of at least 30% each year? Therefore, you are likely sending personalized
                               email communications to inactive ids, thus thwarting your team’s morale and costing your
                               company a significant reduction in revenue.</p>
-                         <p>Put an end to unresponsive email campaigns by choosing Span Global Services Canada Business
+                         <p>Put an end to unresponsive email campaigns by choosing Affluence Business Inc Canada Business
                               Email List. Our <strong>Canadian Email List</strong> gives you access to potential clients
                               who are already scouting the marketing for the products and services you are selling.</p>
                          <p>And, why only use our <a href="/email-lists"
@@ -121,7 +121,7 @@
                                              action=" " method="post"
                                              onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                                   value=" "><input name="title"
-                                                  type="hidden" value="Contact Request from Span Global Services">
+                                                  type="hidden" value="Contact Request from Affluence Business Inc">
                                              <div class=" form-row">
                                                   <div class="col-lg-6 form-group">
                                                        <div class="input-container"> <input type="text" name="fname"
@@ -329,7 +329,7 @@
                               src="/static/assets/img/quality-leads-usa.jpg"
                               class="respo-img" alt="Canada Business Email List" /></div>
                     <div class="col-lg-6 mb-4 wow fadeInLeft">
-                         <h2 class="subhead-small-blk" style="margin-top:10px;">Benefits of Procuring Span Global
+                         <h2 class="subhead-small-blk" style="margin-top:10px;">Benefits of Procuring Affluence Business Inc
                               Services’ Canadian Business Email List</h2>
                          <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                    title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique
@@ -363,7 +363,7 @@
                     <div class="col-lg-12 wow fadeInLeft">
                          <h2 class="subhead-small-blk">Get Quality Customers with Canadian Business Heads Mailing
                               Addresses</h2>
-                         <p><a href=/ title="Span Global Services"><strong>Span
+                         <p><a href=/ title="Affluence Business Inc"><strong>Span
                                         Global Services</strong></a> has been a pioneer in the data industry for over a
                               decade. Our constant efforts to offer superior quality data has benefitted our clients
                               across business verticals, especially IT firms. So, why wait! Harness our potent databases
@@ -374,7 +374,7 @@
                               our microscopically vetted <strong>Canada Email List</strong>, you can intelligently
                               segment clients, circumvent intermediaries, personalize communication, and stay on top of
                               the competition.</p>
-                         <p>Span Global Service’s <strong>Canadian Email List</strong> incorporates the following
+                         <p>Affluence Business Inc’s <strong>Canadian Email List</strong> incorporates the following
                               standard categories:</p>
                          <div class="row">
                               <div class="col-lg-3 wow fadeInLeft">
@@ -476,7 +476,7 @@
                          <h2 class="subhead-small-blk">Try Before Buy!</h2>
                          <p>Sure, we claim a secure, compliant, and comprehensive <strong>Canadian Email List</strong>,
                               but you might want more than that, and why not! Your revenue depends on the quality of
-                              your business email list. As we understand what is at stake here, Span Global Services
+                              your business email list. As we understand what is at stake here, Affluence Business Inc
                               will be happy to offer you a free sample of our Canada email list.</p>
                          <p>Use the sample to figure out if what we are made of! Get in touch with us and try our wares
                               today!</p>
@@ -1002,7 +1002,7 @@
                                         onsubmit="return fnValidationContactside()"
                                         action=" "
                                         enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                             value="Contact Details from Span Global Services"> <input
+                                             value="Contact Details from Affluence Business Inc"> <input
                                              name="redirect_url" type="hidden"
                                              value=" ">
                                         <div class=" form-row">
