--- a/templates/geo-targeted-lists/uk-business-email-list.html
+++ b/templates/geo-targeted-lists/uk-business-email-list.html
@@ -153,7 +153,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -505,7 +505,7 @@
                     <h2 class="subhead-small-blk mb-2">USA Business Email Lists – Aligned Towards Achieving Your
                         Targeted Business Goals</h2>
                     <p style="text-align:Justify;">As a marketer if you want to engage in effective business
-                        communication with business heads and top executives in USA, then Span Global Services'
+                        communication with business heads and top executives in USA, then Affluence Business Inc'
                         <strong>USA Business Email List</strong> is the best tool for you. You can directly have
                         business communication with your targeted audience and keep them engaged. We have developed an
                         extensive database with contact details of over 30 million business executives in USA. Marketers
@@ -519,7 +519,7 @@
                     <p style="text-align:Justify;">The <strong>USA Business Mailing List</strong> is built to facilitate
                         B2B marketing, therefore marketers can leverage from a single investment with repeated returns.
                     </p>
-                    <p style="text-align:Justify;">Having access to Span Global Services meticulously created data will
+                    <p style="text-align:Justify;">Having access to Affluence Business Inc meticulously created data will
                         make sure marketers will make the right business decisions and be influential in taking their
                         brand to global success. Furthermore, it gives you the opportunity to promote your products and
                         services in the international markets and achieve your targeted business goals. You can connect
@@ -535,7 +535,7 @@
                         src="/static/assets/img/quality-leads-usa.jpg" class="respo-img"
                         alt="USA Business Email List" /></div>
                 <div class="col-lg-6 pt-5 pb-5 mt-3 wow fadeInLeft">
-                    <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ USA Email Leads</h2>
+                    <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ USA Email Leads</h2>
                     <p><img src="/static/assets/img/green-right.png" alt="Benefits" title=""
                             class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
                             attributes</strong> </p>
@@ -567,7 +567,7 @@
                 <div class="col-lg-6 mb-4 wow fadeInLeft" style="padding: 10px 0 0px 0;">
                     <h2 class="subhead-small-blk mb-4">Get Access to the Most Reliable USA Business Contacts List for
                         Quality Leads</h2>
-                    <p style="text-align:Justify;">Span Global Service is the trusted provider of high quality business
+                    <p style="text-align:Justify;">Affluence Business Inc is the trusted provider of high quality business
                         leads in the international market. It is known for the authenticity and accuracy of the data we
                         provide. USA Business Mailing Lists are regularly updated to give you current and reliable
                         contact details of businesses in USA. Most companies are relying on our <a
@@ -703,7 +703,7 @@
                         contact data of your targeted audience. Therefore it is now convenient to get accurate and
                         verified data at affordable rates. We at <a
                             href="/email-lists"
-                            title="Span Global Services"><strong>Span Global Services</strong></a> understand how
+                            title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> understand how
                         important business contact lists are to companies. Therefore to make things easier, we have
                         built a unique platform to launch campaigns, create market presence, and to get qualified sales
                         leads from all across the United States.</p>
@@ -1086,7 +1086,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
