--- a/templates/geo-targeted-lists/usa-business-email-list.html
+++ b/templates/geo-targeted-lists/usa-business-email-list.html
@@ -186,7 +186,7 @@
                                     onSubmit="return validationcon()">
                                     <input type="hidden" name="returnURL"
                                         value=" " /><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services" />
+                                        type="hidden" value="Contact Request from Affluence Business Inc" />
                                     <div class="form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container">
@@ -565,7 +565,7 @@
                     <p style="text-align: Justify">
                         As a marketer if you want to engage in effective business
                         communication with business heads and top executives in USA, then
-                        Span Global Services' <strong>USA Business Email List</strong> is
+                        Affluence Business Inc' <strong>USA Business Email List</strong> is
                         the best tool for you. You can directly have business communication
                         with your targeted audience and keep them engaged. We have developed
                         an extensive database with contact details of over 30 million
@@ -587,7 +587,7 @@
                         single investment with repeated returns.
                     </p>
                     <p style="text-align: Justify">
-                        Having access to Span Global Services meticulously created data will
+                        Having access to Affluence Business Inc meticulously created data will
                         make sure marketers will make the right business decisions and be
                         influential in taking their brand to global success. Furthermore, it
                         gives you the opportunity to promote your products and services in
@@ -608,7 +608,7 @@
                 </div>
                 <div class="col-lg-6 pt-5 pb-5 mt-3 wow fadeInLeft">
                     <h2 class="subhead-small-blk">
-                        Benefits of Procuring Span Global Services’ USA Email Leads
+                        Benefits of Procuring Affluence Business Inc’ USA Email Leads
                     </h2>
                     <p>
                         <img src="/static/assets/img/green-right.png" alt="Benefits" title=""
@@ -662,7 +662,7 @@
                         Quality Leads
                     </h2>
                     <p style="text-align: Justify">
-                        Span Global Service is the trusted provider of high quality business
+                        Affluence Business Inc is the trusted provider of high quality business
                         leads in the international market. It is known for the authenticity
                         and accuracy of the data we provide. USA Business Mailing Lists are
                         regularly updated to give you current and reliable contact details
@@ -882,7 +882,7 @@
                         audience. Therefore it is now convenient to get accurate and
                         verified data at affordable rates. We at
                         <a href="/email-lists"
-                            title="Span Global Services"><strong>Span Global Services</strong></a>
+                            title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a>
                         understand how important business contact lists are to companies.
                         Therefore to make things easier, we have built a unique platform to
                         launch campaigns, create market presence, and to get qualified sales
@@ -1423,7 +1423,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data">
-                                <input name="subject" type="hidden" value="Contact Details from Span Global Services" />
+                                <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc" />
                                 <input name="redirect_url" type="hidden"
                                     value=" " />
                                 <div class="form-row">
