--- a/templates/gov-sector-decision-makers-data.html
+++ b/templates/gov-sector-decision-makers-data.html
@@ -76,7 +76,7 @@
           <div class="col-lg-4 mb-4 wow fadeInLeft">
              <div class="grey-box-con-1">
                 <h4>Solved a key challenge by ensuring accurate delivery to the target government sector audience email IDs.</h4>
-                <p>Accurate email delivery was ensured by matching the client’s existing CRM lead data with a refreshed and accurate list maintained by Span Global lead data experts. </p>
+                <p>Accurate email delivery was ensured by matching the client’s existing CRM lead data with a refreshed and accurate list maintained by Affluence Business Inc lead data experts. </p>
                 <p>Multiple email inaccuracies were solved and replaced with the individual’s present and updated contact details.</p>
             </div>
           </div>
@@ -180,7 +180,7 @@
 			   <p style="text-align:Justify;">This is a fast-paced world, with high-speed communication channels – where people demand change more rapidly. Citizen behavior and the patterns of engagement with the government have changed for good. This is attributed to digital technologies that have created environments for people to work in new ways, rely on futuristic services, and build high expectations on the amenities that they need on a day to-day basis.</p>
                
                <p style="text-align:Justify;">This has a ripple effect and poses new challenges for all organizations and creates added pressure on governments too to deliver. Relying on digital technologies is the way forward for governments to reach the kind of efficiency that is required for them to succeed.</p> 
-			   <p style="text-align:Justify;">Span Global Services Government sector decision-maker data help you to align your services towards digital technology adoption. Our data solutions also make the adoption of allied products and solutions a seamless process. By leveraging our Government Sector Decision maker data you are more enabled to help governments deliver better governance, achieve better outcomes for their citizens. Eventually this helps build sustainable working environments for government and public sector workers as well.</p>
+			   <p style="text-align:Justify;">Affluence Business Inc Government sector decision-maker data help you to align your services towards digital technology adoption. Our data solutions also make the adoption of allied products and solutions a seamless process. By leveraging our Government Sector Decision maker data you are more enabled to help governments deliver better governance, achieve better outcomes for their citizens. Eventually this helps build sustainable working environments for government and public sector workers as well.</p>
                
                
                <p style="text-align:Justify;">We help you align your digital services for the government sector so that they can pass on better services to their citizens. Your services would enable them to optimize returns on public investment and help them develop smart infrastructure to help societies and economies function better. In essence, you help them deliver a robust governance model that promises citizen security and keeps strategic interests safe. With our government decision makers' data, we can help you drive meaningful conversations with people who matter the most in the government functionary and help them address their challenges head-on.
@@ -204,7 +204,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -336,12 +336,12 @@
           <div class="col-lg-6 pb-4 section-fpad mb-4 wow fadeInLeft centeralign">
           	<div>
                 <h2 class="subhead-small-blk">Aligning your Services that are geared to Enable Good Governance  </h2>
-                <p style="text-align:Justify;">We at Span Global Services not only provide you with Government Decision maker’s data we help you run multichannel marketing campaigns, nurture campaigns, and drip campaigns. We also help you employ a slew of online marketing campaigns such as Google, PPC, and remarketing campaigns to reach out to and pitch your services to government agencies at the most appropriate time. </p> 
+                <p style="text-align:Justify;">We at Affluence Business Inc not only provide you with Government Decision maker’s data we help you run multichannel marketing campaigns, nurture campaigns, and drip campaigns. We also help you employ a slew of online marketing campaigns such as Google, PPC, and remarketing campaigns to reach out to and pitch your services to government agencies at the most appropriate time. </p>
 				<p style="text-align:Justify;">Our focused digital campaigns for the government sector help you strike the right notes with government officials and build the right conversation with top government bureaucrats, ministers and policy makers. Our efforts just don’t stop here – we map the entire journey of your engagement with government sector prospects and also support you in crafting tailored and convincing content for all communications.</p>
                 
                 <p style="text-align:Justify;">We support you with intelligence at every step to know the priorities of your target government sector audience. Our data helps you uncover planning, implementation, and transformation needs based on what target government officials are researching online. Establish connections with officials who allocate budget spends, solicit competitive bids for projects – by helping them find the right-fit solutions. You can also dish out credible use cases for improving governance.</p>
                 
-                <p style="text-align:Justify;">You have a Business to Government Stakeholder Targeting (B2G) need – think no further than Span Global Services. </p>
+                <p style="text-align:Justify;">You have a Business to Government Stakeholder Targeting (B2G) need – think no further than Affluence Business Inc. </p>
                 
                  <div class="mb-4 mt-4">
                     <a href="#" data-toggle="modal" data-target="#send-message" class="green-btn circle-fa">Get Data Counts & Price! &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
@@ -371,7 +371,7 @@
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
