--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 <title>Buy B2B Email List | 100% Opt-in B2B Email Database | </title>
-<meta name="description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Span Global Services."/>
+<meta name="description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Affluence Business Inc."/>
 <meta name="keywords" content="B2B Email List, B2B Email DataBase, B2B Email Leads, B2B Email List Providers, Buy Business Contact Lists, B2B Email Marketing Lists, B2B Email Addresses, B2B Email Data, B2B Mailing Lists, B2B Contact Lists, Buy B2B Email Lists"/>
 <meta name="robots" content="index, follow" />
 <link rel="canonical" href="/b2b-email-list"/>
@@ -17,14 +17,14 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="/b2b-email-list">
   <meta property="og:title" content="Buy B2B Email List | 100% Opt-in B2B Email Database | SGS">
-  <meta property="og:description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Span Global Services.">
+  <meta property="og:description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Affluence Business Inc.">
   <meta property="og:image" content="/static/assets/img/new-affluence-logo.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="/b2b-email-list">
   <meta property="twitter:title" content="Buy B2B Email List | 100% Opt-in B2B Email Database | SGS">
-  <meta property="twitter:description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Span Global Services.">
+  <meta property="twitter:description" content="The quality of your B2B email list can make or break your campaign. So, trust accurate and verified contact data from Affluence Business Inc.">
   <meta property="twitter:image" content="/static/assets/img/logo.png">
 
 <link rel="alternate" hreflang="en-US" href="/b2b-email-list"/>
@@ -141,7 +141,7 @@
       <div class="clearfix"></div>
 
       <div id="logo" class="pull-left">
-        <a href="/" alt="Span Global Services" title="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" alt="Span Global Services Logo"></a>
+        <a href="/" alt="Affluence Business Inc" title="Affluence Business Inc"><img src="/static/assets/img/new-affluence-logo.png" alt="Affluence Business Inc Logo"></a>
       </div>
 
       <nav id="nav-menu-container">
