--- a/templates/healthcare-lists.html
+++ b/templates/healthcare-lists.html
@@ -43,7 +43,7 @@
                         <p style="text-align:Justify;">How a surgeon can’t operate without the right tools, you can’t
                             successfully market amidst this goldmine if you don’t possess the correct avenues. The
                             appropriate data, in-depth customer details, and even more so, maintaining the genuineness
-                            of all the information. If these worry you, Span Global Services has the best treatment –
+                            of all the information. If these worry you, Affluence Business Inc has the best treatment –
                             our <strong>Healthcare Mailing List</strong>.</p>
                         <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
                                 class="green-btn circle-fa">Purchase Healthcare Data Now! &nbsp; <i
@@ -59,7 +59,7 @@
                                         action=" " method="post"
                                         onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                             value=" "><input name="title"
-                                            type="hidden" value="Contact Request from Span Global Services">
+                                            type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname"
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
-                        <h2 class="subhead-small-blk mb-2">Span Global Services Focuses on Who You Want, More than who
+                        <h2 class="subhead-small-blk mb-2">Affluence Business Inc Focuses on Who You Want, More than who
                             You Are.</h2>
                         <p style="text-align:Justify;">Whether you’re a start-up or a decade-old marketer, to us, you’re
                             equal. That’s why we have devised a <strong>Healthcare Email Database</strong> that is
@@ -625,7 +625,7 @@
                                                     <p>The authenticity and reliability of a professionally collated
                                                         list are helpful in marketing as it reduces your overall
                                                         campaign costs and the sales cycle time. The healthcare email
-                                                        lists from Span Global Services have accurate, responsive and
+                                                        lists from Affluence Business Inc have accurate, responsive and
                                                         tele-verified data that can enhance your campaign revenue.
                                                         Besides, the list may be customized to suit your business
                                                         criteria.</p>
@@ -654,7 +654,7 @@
                                     onsubmit="return fnValidationContactside()"
                                     action=" "
                                     enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                        value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                        value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                         type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname"
