--- a/templates/healthcare-lists/dentists-email-list.html
+++ b/templates/healthcare-lists/dentists-email-list.html
@@ -27,7 +27,7 @@
                     <p style="text-align:Justify;">Targeting a highly-segmented audience with your marketing campaigns
                         is as important as flossing. Dentists, particularly in the USA, require myriad tools and dental
                         products to keep their customers’ oral health in top-notch condition. And if your company sells
-                        such products and solutions, Span Global Services' high-quality <strong>Dentist Email
+                        such products and solutions, Affluence Business Inc' high-quality <strong>Dentist Email
                             Lists</strong> will no doubt enable you to land your product information in the right
                         dentist’s inbox.</p>
                     <p style="text-align:Justify;">The list can be put to use in a myriad of different ways. You can use
@@ -36,7 +36,7 @@
                         supplies like masks and scrubs, X-ray machines, lights, or other products dentists recommend or
                         use daily; this <strong>Dentist Mailing List</strong> can be a valuable aid in your marketing
                         campaign.</p>
-                    <p style="text-align:Justify;">Span Global Services strives to help pharmaceutical and medical
+                    <p style="text-align:Justify;">Affluence Business Inc strives to help pharmaceutical and medical
                         marketers reach out to potential customers who would likely be interested in your oral
                         health-related products and services. With this <strong>List of Dentist Email
                             Addresses</strong>, you can target dentists working all across the globe.</p>
@@ -90,7 +90,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -337,7 +337,7 @@
                 <div class="col-lg-6 advantage-tech-list-bg-new wow fadeInRight"></div>
                 <div class="col-lg-6 mb-4 wow fadeInLeft">
                     <div class="pad-sec mb-sec">
-                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Span Global Services’ Dentist Email
+                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Affluence Business Inc’ Dentist Email
                             Database</h2>
                         <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -422,7 +422,7 @@
                 <div class="col-lg-12 wow fadeInLeft">
                     <h2 class="subhead-small-blk">Why Choose Dentist Email Addresses From Us?</h2>
                     <p style="text-align:Justify;">With this affordable, highly-targeted <strong>List of Dentist Email
-                            Addresses</strong> from Span Global Services, you can reach out to worldwide dentists and
+                            Addresses</strong> from Affluence Business Inc, you can reach out to worldwide dentists and
                         put a smile on the face of people who, in turn, make their patients smile. Use this dentist
                         email list to find accurate contact information and market your dental services and products
                         more effectively. This list of high-quality sales leads pulls together a diverse and spread-out
@@ -763,7 +763,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
