--- a/templates/healthcare-lists/hospital-email-list.html
+++ b/templates/healthcare-lists/hospital-email-list.html
@@ -25,7 +25,7 @@
                     <h2 class="subhead-small-blk mb-2 mb-sec">Reach Your Target Audience with Our Hospital Mailing List
                     </h2>
                     <p style="text-align:Justify;">Getting the right <strong>Hospital Email List</strong> is a
-                        challenging task for medical marketers. Span Global Services has developed the right data
+                        challenging task for medical marketers. Affluence Business Inc has developed the right data
                         exclusively for marketers. This has made their task easier and saved a lot of their time and
                         resources. You can reach out to decision makers in hospitals who have the authority to buy your
                         services. We are rated as one of the top <a
@@ -94,7 +94,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -342,7 +342,7 @@
                 <div class="col-lg-6 advantage-tech-list-bg-new wow fadeInRight"></div>
                 <div class="col-lg-6 mb-4 wow fadeInLeft">
                     <div class="pad-sec mb-sec">
-                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Span Global Services’ Hospital Email
+                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Affluence Business Inc’ Hospital Email
                             Address List</h2>
                         <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -489,7 +489,7 @@
                         <strong>Hospital Email Address List</strong> is the right tool for you. With verified data you
                         will connect with targeted medical specialists and establish seamless communication with them.
                         Our healthcare email lists are one stop shop for all your hospital data needs. So, if you are
-                        looking to reach out to various hospitals then Span Global Services is the place for you.
+                        looking to reach out to various hospitals then Affluence Business Inc is the place for you.
                     </p>
                     <p style="text-align:Justify;">Do not waste time thinking. Invest in our <strong>Hospital Contact
                             List</strong> to increase visibility of your medical offerings to the right hospital
@@ -514,8 +514,8 @@
                         existing customers data to keep it deliverable and active. Launch data-driven campaigns and reap
                         benefits. </p>
                     <p style="text-align: justify;">For detailed data and count requests contact us by email at:<a
-                            href="mailto:info@affluencebusiness"
-                            title="Email Span Global Services">info@affluencebusiness </a></p>
+                            href="mailto:steve@affluencebizdata.com"
+                            title="Email Affluence Business Inc">steve@affluencebizdata.com </a></p>
                     <div class="mb-5 mt-4"> <a href="/contact-us"
                             class="green-btn circle-fa">BUY DATABASE NOW &nbsp; <i
                                 class="fa icon ion-android-arrow-forward"></i></a> </div>
@@ -844,7 +844,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
