--- a/templates/healthcare-lists/nurses-email-list.html
+++ b/templates/healthcare-lists/nurses-email-list.html
@@ -30,7 +30,7 @@
                         percent of the nurse workforce. Besides, over half of healthcare professional course students
                         are aspiring to be nurses. Medical marketers looking to reach nurse practitioners for business
                         communication will find our Nurses mailing list ideal for running global campaigns. </p>
-                    <p style="text-align:Justify;">Span Global Services provides an exhaustive <strong>Registered Nurses
+                    <p style="text-align:Justify;">Affluence Business Inc provides an exhaustive <strong>Registered Nurses
                             Email List</strong> that can significantly alter your campaign returns. Designed with
                         precision to suit direct, online and telemarketing campaigns, the Nurses directory is a robust
                         database with verified and customized data on over 1 million nurse practitioners. The nurse's
@@ -38,15 +38,15 @@
                         nurses, midwives and more to maximize your chance of building business association with them.
                     </p>
                     <p style="text-align:Justify;">There are many advantages of investing in the <strong>Nurse
-                            Practitioners Mailing Lists</strong>. Span Global Services provides verified and responsive
+                            Practitioners Mailing Lists</strong>. Affluence Business Inc provides verified and responsive
                         nurses email database that can foster business communication. Besides the opt-in nurses email
-                        list from Span Global Services offers the largest selection from across the world to enhance
+                        list from Affluence Business Inc offers the largest selection from across the world to enhance
                         your marketing efforts and to help you generate leads that convert.</p>
                     <p style="text-align:Justify;">There are many other <a
                             href="/"
                             title="Healthcare Email List"><strong>healthcare mailing list</strong></a> vendors in the
                         market, but very few of them provide accurate b2b data. With years of experience in providing
-                        verified data, we at Span Global Services go the extra mile to maintain highest quality of our
+                        verified data, we at Affluence Business Inc go the extra mile to maintain highest quality of our
                         exhaustive and segmented healthcare lists. A dedicated team of researchers have compiled the
                         <strong>Nurses Email Database</strong> from legitimate sources. Therefore, marketers get access
                         to verified data that can maximize campaign success.
@@ -101,7 +101,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -353,7 +353,7 @@
                         src="/static/assets/img/healthcare-inner-sub.jpg" class="respo-img"
                         alt="Cardiologist Email List" /></div>
                 <div class="col-lg-6 mt-3 wow fadeInLeft">
-                    <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Nurses Email List</h2>
+                    <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Nurses Email List</h2>
                     <p><img src="/static/assets/img/green-right.png" alt="Benefits" title=""
                             class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
                             attributes</strong> </p>
@@ -387,7 +387,7 @@
                     </h2>
                     <p style="text-align:Justify;">There are many parameters that asses the success of campaigns.
                         Deliverability, response rates and revenue are some of the important parameters that can assure
-                        success for businesses and medical marketers. At Span Global Services we understand that nurses
+                        success for businesses and medical marketers. At Affluence Business Inc we understand that nurses
                         work with doctors and they are connected with healthcare decision makers at their workplace. We
                         also understand the importance of verified <strong>Nurse Email Database</strong> as nurses are
                         too busy to attend to unsolicited communication. Keeping this in mind we provide an exhaustive
@@ -397,7 +397,7 @@
                     <p style="text-align:Justify;">Besides, leading nurse practitioners are professionally associated
                         with senior doctors, physicians and specialist surgeons and more that are responsible for
                         purchase decisions across medical facilities. If you are an astute marketer, we suggest that you
-                        partner with Span Global Services and buy opt-in <strong>Nurses Email List</strong> for assured
+                        partner with Affluence Business Inc and buy opt-in <strong>Nurses Email List</strong> for assured
                         deliverability, brand building and assured returns through global campaigns. The authentic and
                         delivery-driven <strong>Nurses Mailing List</strong> are permission-based, can-spam compliant
                         (on request), and segmented to ensure that marketers get optimal results through multichannel
@@ -429,12 +429,12 @@
                         ensure that your campaigns are delivered to your target audience without any delays. Our
                         attention to detail in providing verified data that epitomizes quality and precision is bound to
                         enhance your campaign returns significantly. </p>
-                    <p style="text-align:Justify;">Span Global Services is undoubtedly the world leader in providing
+                    <p style="text-align:Justify;">Affluence Business Inc is undoubtedly the world leader in providing
                         verified data and we give marketers the assurance of supreme data quality, accuracy and
                         reliability while building our healthcare email lists. The <strong>Nurse Practitioners Mailing
                             List</strong> will help marketers reach nurses across the healthcare domain and build long
                         lasting business association with target audience base.</p>
-                    <p style="text-align:Justify;">Span Global Services gives the assurance of unmatched quality,
+                    <p style="text-align:Justify;">Affluence Business Inc gives the assurance of unmatched quality,
                         precision and brand enhancement. This mailing list of nurses is the perfect tool to help in
                         effective brand building and revenue generating campaigns. </p>
                     <p style="text-align:Justify;">Our databases are a lot more than just data. They are accurate <a
@@ -766,7 +766,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
