--- a/templates/industry-wise-lists.html
+++ b/templates/industry-wise-lists.html
@@ -35,7 +35,7 @@
                             only one goal and that is to turn over every stone that falls a barrier to your campaign
                             success. We make yours a success story everytime by delivering your communication to the
                             right prospects who will benefit from your products and services.</p>
-                        <p style="text-align:Justify;">Span Global Services is the market leader with superior industry
+                        <p style="text-align:Justify;">Affluence Business Inc is the market leader with superior industry
                             solutions for targeting the industries required to reach your marketing goals, and we make
                             it possible with the most relevant industry mailing lists. Our data makes it easy to reach
                             highly responsive decision-makers, who usually decide the future of your highly capable
@@ -56,7 +56,7 @@
                                         action=" " method="post"
                                         onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                             value=" "><input name="title"
-                                            type="hidden" value="Contact Request from Span Global Services">
+                                            type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname"
@@ -359,7 +359,7 @@
                             &amp; ITES, manufacturing, telecommunications or any other industry. If you are thinking
                             that such marketing spends won’t be able to get you the desired results, then think again.
                             It can’t get easier and affordable to target specific business email list data for your
-                            email marketing campaigns. Span Global Services specializing in boosting lead generation and
+                            email marketing campaigns. Affluence Business Inc specializing in boosting lead generation and
                             sales for companies large and small. Our email marketing experts dedicatedly work with you
                             to identify, quantify and target prospects to propel your sales leads. Marketing to the
                             service industry top-notch professionals is now easier and more efficient with service
@@ -396,7 +396,7 @@
                             UK, Europe, APAC, Canada and more.</p>
                         <h2 class="subhead-small-blk">The Benefit of Using our Industry Professionals Mailing Database
                         </h2>
-                        <p style="text-align:Justify;">We, at Span Global Services, are here to assist B2B marketers in
+                        <p style="text-align:Justify;">We, at Affluence Business Inc, are here to assist B2B marketers in
                             their campaigns. Our niche list of Industry Professionals in the USA is a meticulously built
                             list with data on professionals from across industries. Whether you are looking for <a
                                 href="/professional-lists/"><strong>C-Level
@@ -407,7 +407,7 @@
                                 title="Geo Targeted">geo-targeted</a> and provide data on executives from across the UK,
                             Europe, APAC, Canada and more. </p>
                         <p style="text-align:Justify;"><a href="/contact-us/"
-                                title="Contact Us"><strong>Contact us</strong></a> today at Span Global Services and let
+                                title="Contact Us"><strong>Contact us</strong></a> today at Affluence Business Inc and let
                             us offer a customized industry-wise marketing database for B2B email campaigns!</p>
                     </div>
                 </div>
@@ -429,7 +429,7 @@
                                     onsubmit="return fnValidationContactside()"
                                     action=" "
                                     enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                        value="Contact Details from Span Global Services">
+                                        value="Contact Details from Affluence Business Inc">
 
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname"
