--- a/templates/industry-wise-lists/automotive-industry-email-list.html
+++ b/templates/industry-wise-lists/automotive-industry-email-list.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-lg-7 section-fpad wow fadeInLeft mb-sec">
           <h2 class="subhead-small-blk mb-2">Connect with Top Decision Makers in the Automobile Industry</h2>
-          <p style="text-align:Justify;">Span Global Services offers the most up-to-date and unique <strong>Automobile
+          <p style="text-align:Justify;">Affluence Business Inc offers the most up-to-date and unique <strong>Automobile
               Industry Email List</strong> containing highly responsive business decision makers and other top
             executives of a company. This list can be used by companies for Email, Postal, Phone and other multi-channel
             marketing campaigns targeted at the Automotive Industry all across the globe.</p>
@@ -31,7 +31,7 @@
             direct marketers looking to develop quick relationship with businesses in the Automotive Industry. The list
             also offers a variety of demographic, title and industry attributes.</p>
           <p style="text-align:Justify;"> We are among the front runners in possessing the most updated contacts of
-            prospective customers and business technology users. The fields covered by Span Global Services include
+            prospective customers and business technology users. The fields covered by Affluence Business Inc include
             complete contact details.</p>
           <h2 class="subhead-small-blk">Customize your Automobile Mailing List by</h2>
           <div class="row respo-icon">
@@ -76,7 +76,7 @@
                 <form name="f12" id="contact-form" action=" "
                   method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                     value=" "><input name="title" type="hidden"
-                    value="Contact Request from Span Global Services">
+                    value="Contact Request from Affluence Business Inc">
                   <div class=" form-row">
                     <div class="col-lg-6 form-group">
                       <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname"
@@ -314,7 +314,7 @@
             src="/static/assets/img/custom-built-email-database.jpg" class="respo-img"
             alt="Pharmaceutical Companies Contacts" /></div>
         <div class="col-lg-6 mt-3 wow fadeInLeft">
-          <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Automotive Mailing List</h2>
+          <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Automotive Mailing List</h2>
           <p><img src="/static/assets/img/green-right.png" alt="Benefits" title=""
               class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
           <p><img src="/static/assets/img/green-right.png" alt="Benefits" title=""
@@ -466,7 +466,7 @@
         </div>
         <div class="col-lg-7 section-fpad wow fadeInLeft">
           <ul class="white-list mb-sec">
-            <p style="text-align:Justify;"><strong>Span Global Services</strong> collates this mailing list through
+            <p style="text-align:Justify;"><strong>Affluence Business Inc</strong> collates this mailing list through
               various sources including, public records, websites, business cards, publications and more. We have also
               partnered with some of the leading magazines and trade shows to source the contact details of leading
               decision makers in the industry. Individual customer consent is taken before updating their contact
@@ -482,7 +482,7 @@
           <h2 class="subhead-small-blk mb-sec">Data Sources That You Can Trust</h2>
           <p style="text-align:Justify;">Access our database of completely standardized records, updated phone and email
             data. The database at our end is verified regularly to ensure maximum accuracy. <a
-              href=/ title="Span Global Services"><strong>Span Global
+              href=/ title="Affluence Business Inc"><strong>Affluence Business Inc
                 Services</strong></a> offers mailing lists for titles such as that include: CEO/President, CFO, CIO/CTO,
             COO, Owner/Partner, Vice Presidents, Directors, IT Executives, Sales Executives, Marketing Executives, HR
             Executives, Operations Executives, Finance Executives, Business Development Exec, Controller, Corporate
@@ -526,7 +526,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>Are you looking to purchase an automotive industry mailing list? Contact us at Span Global
+                        <p>Are you looking to purchase an automotive industry mailing list? Contact us at Affluence Business Inc
                           Services to receive the most extensive email list with updated, well-researched contacts for
                           high CTRs and deliverability rates.</p>
                       </div>
@@ -543,7 +543,7 @@
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                       data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>Span Global Services is the ideal source to purchase an automotive industry email list. We
+                        <p>Affluence Business Inc is the ideal source to purchase an automotive industry email list. We
                           house every detail that you may need to grow your sales, along with 100% verified insights
                           about the top automotive professionals, and regularly-updated leads.</p>
                       </div>
@@ -815,7 +815,7 @@
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
                 action=" " enctype="multipart/form-data"> <input
-                  name="subject" type="hidden" value="Contact Details from Span Global Services"> <input
+                  name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input
                   name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname"
