--- a/templates/industry-wise-lists/banking-and-finance-industry-email-list.html
+++ b/templates/industry-wise-lists/banking-and-finance-industry-email-list.html
@@ -29,11 +29,11 @@
                         complete transformation. As digital banking solutions replace in-person interactions, AI is
                         making inroads in wealth management applications. If your business specializes in the field, now
                         is your time to shine. Avail our <strong>Banking and Finance Industry Email List</strong> from
-                        Span Global Services and engage notable decision-makers to seal exclusive sales deals.</p>
+                        Affluence Business Inc and engage notable decision-makers to seal exclusive sales deals.</p>
                     <p style="text-align:Justify;">The financial sector is a busy one, and directly engaging prospective
                         customers is a hard nut to crack for B2B marketers. With our comprehensive <strong>Banking Email
                             Database</strong>, connect with financial analysts, bank examiners, lenders, investment
-                        bankers, and much more. Span Global Services guarantees a 95% deliverance rate, powering
+                        bankers, and much more. Affluence Business Inc guarantees a 95% deliverance rate, powering
                         marketers with pre-packaged and sales-ready data. </p>
                     <p style="text-align:Justify;">Your business can effectively enhance sales revenue and enrich CRM in
                         less time. Besides, our <a href="/email-lists"
@@ -91,7 +91,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -351,7 +351,7 @@
                         src="/static/assets/img/custom-built-email-database.jpg"
                         class="respo-img" alt="Pharmaceutical Companies Contacts" /></div>
                 <div class="col-lg-6 mt-3 wow fadeInLeft">
-                    <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Finance Industry Email
+                    <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Finance Industry Email
                         List</h2>
                     <p><img src="/static/assets/img/green-right.png" alt="Benefits" title=""
                             class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -385,7 +385,7 @@
                     <h2 class="subhead-small-blk mb-sec">The Most Comprehensive and Accurate Banking Email Database
                         Available</h2>
                     <p style="text-align:Justify;">Reach out and build business relationships by employing our 100%
-                        accurate <strong>Banking Industry Email List</strong>. Span Global Services helps you identify,
+                        accurate <strong>Banking Industry Email List</strong>. Affluence Business Inc helps you identify,
                         target, and qualify the right prospects. For delivering constructive <a
                             href="/b2b-email-list" title="B2B Sales Leads"><strong>B2B
                                 Sales Leads</strong></a>, we regularly verify and update the email database. You can
@@ -525,7 +525,7 @@
                     <p style="text-align:Justify;">Breaking into an industry as mammoth as banking and finance requires
                         much more than traditional marketing gimmicks. If building brand awareness and elevating brand
                         visibility is the goal, data-smart mailing databases are a must. Purchase <strong>Banking
-                            Industry Mailing List</strong> from Span Global Services and unlock your true marketing
+                            Industry Mailing List</strong> from Affluence Business Inc and unlock your true marketing
                         potential.</p>
                     <p style="text-align:Justify;">Run multi-channel marketing campaigns using the information provided
                         in our targeted email lists. This includes direct marketing, event marketing, <a
@@ -770,7 +770,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
