--- a/templates/industry-wise-lists/manufacturing-industries-email-list.html
+++ b/templates/industry-wise-lists/manufacturing-industries-email-list.html
@@ -30,8 +30,8 @@
             for consumption. The industry supports various sectors and contributes a massive $2.3 trillion to the US
             GDP. Safe to say, if you want to tap into this vast and competitive industry, you need access to a robust
             database that lets you target top decision-makers in this industry. And a manufacturing industry email list
-            from Span Global Services lets you do just that. </p>
-          <p align="justify">Span Global Services' manufacturing industry mailing list is a comprehensive database of
+            from Affluence Business Inc lets you do just that. </p>
+          <p align="justify">Affluence Business Inc' manufacturing industry mailing list is a comprehensive database of
             relevant decision-makers and industry professionals to help you pitch your product or service to the right
             audience. With an updated and verified <a href="/email-lists"
               target="_blank">email list</a>, you can interact with manufacturing industry experts, managers, buyers,
@@ -53,7 +53,7 @@
                 <form name="f12" id="contact-form" action=" "
                   method="post" onSubmit="return validationcon()">
                   <input type="hidden" name="returnURL" value=" ">
-                  <input name="title" type="hidden" value="Contact Request from Span Global Services">
+                  <input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
                   <div class=" form-row">
@@ -371,11 +371,11 @@
     <div class="container">
       <div class="row  pb-3 mt-3 wow fadeInRight" style="padding-top:80px">
         <div class="col-lg-6 mb-4 wow fadeInRight paddingr-50">
-          <h2 class="subhead-small-blk">Why Choose Manufacturing Database from Span Global Services?</h2>
+          <h2 class="subhead-small-blk">Why Choose Manufacturing Database from Affluence Business Inc?</h2>
           <p style="text-align:Justify;">Wondering how a manufacturing industries list can help boost your business? For
             starters, building an email database in-house is an overwhelming and challenging process. You might run into
             data quality issues like missing information, inaccurate segmentation, human errors, and more. But a
-            reliable data provider like Span Global Services makes things easy. </p>
+            reliable data provider like Affluence Business Inc makes things easy. </p>
           <p style="text-align:Justify;">Our data experts offer you a comprehensive database for manufacturing
             companies, which is accurate, verified, and authentic. Secondly, with our database, you can launch
             multi-channel marketing campaigns through email, SMS, social media, events, and more. The best part? Our
@@ -423,7 +423,7 @@
             campaigns. You can identify the best accounts to target, create content to address their unique needs, and
             convert them into loyal customers. Further, you can customize this database based on location, demographics,
             specialization, sector, and so on. </p>
-          <p style="text-align:Justify;">So, boost your business reach today with Span Global Services' manufacturing
+          <p style="text-align:Justify;">So, boost your business reach today with Affluence Business Inc' manufacturing
             companies email lists. </p>
         </div>
         <div class="col-lg-6  wow fadeInRight">
@@ -454,7 +454,7 @@
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
                 action=" " enctype="multipart/form-data">
-                <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+                <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
                 <input name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group">
