--- a/templates/industry-wise-lists/oil-and-gas-industry-email-list.html
+++ b/templates/industry-wise-lists/oil-and-gas-industry-email-list.html
@@ -24,7 +24,7 @@
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
                          <h2 class="subhead-small-blk mb-2 mb-sec">Targeted Oil and Gas Industry Email Lists to Reach
                               Your Market in No Time</h2>
-                         <p style="text-align:Justify;">Span Global Services <strong>Oil and Gas Industry Email
+                         <p style="text-align:Justify;">Affluence Business Inc <strong>Oil and Gas Industry Email
                                    List</strong> is a comprehensive <a
                                    href="/b2b-email-list"
                                    title="Business List"><strong>business list</strong></a> that features the contact
@@ -43,7 +43,7 @@
                               top management is well-known for being elusive, you need to use a targeted approach with
                               the right data on these executives - Who are these high-potential prospects and what are
                          </p>
-                         <p style="text-align:Justify;">This is where <strong>Span Global Services</strong> will help
+                         <p style="text-align:Justify;">This is where <strong>Affluence Business Inc</strong> will help
                               you with our data solutions. Our Oil and Gas Industry contact lists will help you to not
                               just market but connect with the upper management of your target company. </p>
                          <h2 class="subhead-small-blk">Customize your Oil & Gas Companies Email Address by</h2>
@@ -96,7 +96,7 @@
                                              action=" " method="post"
                                              onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                                   value=" "><input name="title"
-                                                  type="hidden" value="Contact Request from Span Global Services">
+                                                  type="hidden" value="Contact Request from Affluence Business Inc">
                                              <div class=" form-row">
                                                   <div class="col-lg-6 form-group">
                                                        <div class="input-container"> <input type="text" name="fname"
@@ -228,11 +228,11 @@
                               src="/static/assets/img/custom-built-email-database.jpg"
                               class="respo-img" alt="Oil and Gas Industry contacts" /></div>
                     <div class="col-lg-6 pt-5 pb-5 mt-3 wow fadeInLeft mb-sec">
-                         <h2 class="subhead-small-blk">Span Global’s Oil and Gas Industry Email Lists: A Gold Mine</h2>
+                         <h2 class="subhead-small-blk">Affluence Business Inc’s Oil and Gas Industry Email Lists: A Gold Mine</h2>
                          <p style="text-align:Justify;">Is your home-grown <strong>Oil and Gas Industry Contact
                                    List</strong> failing to achieve the desired results? To land the big fish, your
                               leads hunt strategy must include the experience-led guidance and support of experts like
-                              Span Global Services.</p>
+                              Affluence Business Inc.</p>
                          <p style="text-align:Justify;">Bound by time and budget? No problem! Our cost-effective data
                               solutions will ensure that you reach the right audience with the right message. From
                               production to logistics departments, we can curate <strong>Oil and Gas Industry Mailing
@@ -246,9 +246,9 @@
                </div>
                <div class="row">
                     <div class="col-lg-12 mb-4 wow fadeInRight">
-                         <h3 class="subhead-small-blk mb-sec">Why Choose Span Global as Your Oil and Gas Industry Email
+                         <h3 class="subhead-small-blk mb-sec">Why Choose Affluence Business Inc as Your Oil and Gas Industry Email
                               List Provider</h3>
-                         <p style="text-align:Justify;">At Span Global Services, we curate oil and gas mailing lists in
+                         <p style="text-align:Justify;">At Affluence Business Inc, we curate oil and gas mailing lists in
                               the most comprehensive manner, following hours of filtration and validation; the end
                               result is 100% accurate and authentic. With us, you get rich contact data of suppliers,
                               HRs, CEOs, and CFOs; data that actually delivers results instead of just making false
@@ -262,7 +262,7 @@
                <div class="row">
                     <div class="col-lg-5 mb-4 wow fadeInLeft">
                          <div class="dark-green ">
-                              <h2>Choose Span Global as Your Oil and Gas Industry Contact List Provider and Experience
+                              <h2>Choose Affluence Business Inc as Your Oil and Gas Industry Contact List Provider and Experience
                                    the Following Benefits-</h2>
                          </div>
                     </div>
@@ -301,7 +301,7 @@
                               verified by real people – data experts and analysts, ensuring that your <strong>Oil and
                                    Gas Industry Email List</strong> is consolidated with precision.</p>
                          <p style="text-align:Justify;">Prior to handing over the <strong>Oil and Gas Industry Mailing
-                                   List</strong> in the format of your choice (.xls or .csv), Span Global runs a vetting
+                                   List</strong> in the format of your choice (.xls or .csv), Affluence Business Inc runs a vetting
                               process wherein personalized marketing content, in the form of whitepapers and case
                               studies, is supplied to understand the lead persona. The leads that show interest in the
                               content qualify the vetting process and are deemed as sales-ready. It is then that the Oil
@@ -413,7 +413,7 @@
                <div class="row">
                     <div class="col-lg-12 wow fadeInLeft">
                          <h3 class="subhead-small-blk">Four Main Sub-lists Offered</h3>
-                         <p style="text-align:Justify;">Span Global will provide you with Oil and Gas Industry email
+                         <p style="text-align:Justify;">Affluence Business Inc will provide you with Oil and Gas Industry email
                               lists that are accurately sourced, well documented, highly responsive, and frequently
                               updated. Our <a href="/email-lists"
                                    title="Targeted Email Lists"><strong>targeted email lists</strong></a> are flexible
@@ -451,7 +451,7 @@
                          </p>
                          <h3 class="subhead-small-blk">Our Reach</h3>
                          <p style="text-align:Justify;">You do not need to limit yourself to a specific region. With
-                              Span Global Services, your brand enjoys expansive reach as our data network extends
+                              Affluence Business Inc, your brand enjoys expansive reach as our data network extends
                               internationally, offering you access to organizations and <a
                                    href="/"><strong>C-level
                                         Executives</strong></a> across various regions such as UK, US, Asia, the Middle
@@ -824,7 +824,7 @@
                                         onsubmit="return fnValidationContactside()"
                                         action=" "
                                         enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                             value="Contact Details from Span Global Services"> <input
+                                             value="Contact Details from Affluence Business Inc"> <input
                                              name="redirect_url" type="hidden"
                                              value=" ">
                                         <div class=" form-row">
