--- a/templates/industry-wise-lists/real-estate-industry-email-list.html
+++ b/templates/industry-wise-lists/real-estate-industry-email-list.html
@@ -32,7 +32,7 @@
                         Mailing Lists, Real Estate Agent Phone Numbers, and Real Estate Telemarketing Lists are among
                         the services we offer to marketers.</p>
                     <p style="text-align:Justify;">For someone who understands how to leverage a marketing strategy, the
-                        real estate industry is a sea of opportunities. Span Global Services delivers <strong>Realtor
+                        real estate industry is a sea of opportunities. Affluence Business Inc delivers <strong>Realtor
                             Mailing Lists</strong> to help you boost your marketing campaigns and expand your business.
                         This will allow you to connect with real estate agents, builders, surveyors, brokers,
                         purchasers, and a variety of other real estate professionals. You can then have personalized
@@ -87,7 +87,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -433,7 +433,7 @@
                     their campaigns and have a greater conversion rate.</p>
                 <p style="text-align:Justify;">We offer a pre-packaged <strong>Email List of Real Estate Agents</strong>
                     as well as a personalized mailing list that corresponds nicely with your organization's individual
-                    marketing objectives, as each firm has its own set of issues and priorities. Span Global Services
+                    marketing objectives, as each firm has its own set of issues and priorities. Affluence Business Inc
                     List of Realtor Email Addresses will assist you in generating highly qualified leads and converting
                     them into sales. To meet your marketing objectives, you can also customize your <strong>Real Estate
                         Email Addresses</strong>. Customized email addresses can help you significantly increase your
@@ -441,7 +441,7 @@
                     reliable sources. Our Real Estate Industry Email List is double-verified and updated in real time to
                     keep it current and active.</p>
                 <p style="text-align:Justify;">So, don’t brood over your real estate sales and marketing much and
-                    procure real estate database from Span Global Services today!</p>
+                    procure real estate database from Affluence Business Inc today!</p>
                 <div class="col-lg-5 mb-4 wow fadeInRight"> </div>
                 <div class="clearfix"></div>
             </div>
@@ -468,7 +468,7 @@
                                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                             data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>There are a plethora of email list providers. However, Span Global
+                                                <p>There are a plethora of email list providers. However, Affluence Business Inc
                                                     Services’ real estate industry email list is carefully designed to
                                                     offer you a 95% deliverability rate, with updated, credible data for
                                                     maximum engagements and organic conversions.</p>
@@ -521,7 +521,7 @@
                                         <div id="collapsefive" class="collapse" aria-labelledby="headingfive"
                                             data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>At Span Global Services, we understand that you might need niche
+                                                <p>At Affluence Business Inc, we understand that you might need niche
                                                     details for meeting your marketing goals. Hence, we provide a
                                                     flexible list where you can change details on requests, and access
                                                     specific information to suit your campaigning needs, be it for a
@@ -766,7 +766,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
