--- a/templates/investors-email-list.html
+++ b/templates/investors-email-list.html
@@ -92,7 +92,7 @@
                     <h2 class="subhead-small-blk">Discover A More Innovative Approach to Data-Driven Excellence</h2>
                     <p> When you are a B2B marketer, time is the most precious (and scarce) resource. So, why spend long hours compiling a contact database from scratch? And that's not all; you have the laborious tasks of verifying, updating, and maintaining
                         it. </p>
-                    <p>Span Global Services is here to save the day with a faster, easier, and smarter way to execute data-driven marketing. Save your time and resources, channel your efforts into running campaigns, and don't worry about data. </p>
+                    <p>Affluence Business Inc is here to save the day with a faster, easier, and smarter way to execute data-driven marketing. Save your time and resources, channel your efforts into running campaigns, and don't worry about data. </p>
                     <div
                         class="mb-4 mt-2"> <a href="#" data-toggle="modal" data-target="#send-message" class="green-btn circle-fa">Access Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div>
             </div>
@@ -269,7 +269,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
