--- a/templates/phone-appending.html
+++ b/templates/phone-appending.html
@@ -104,15 +104,15 @@
                 <div class="row">
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
                         <h2 class="subhead-small-blk">Get phone numbers of your customers and prospects by effectively using Telephone Appending Services</h2>
-                        <p>Have you amassed a bunch of postal addresses and wish you had telephone numbers for them as well? Do you know where to look when you want to <strong>append relevant phone numbers</strong> to these records? Span Global Services'
+                        <p>Have you amassed a bunch of postal addresses and wish you had telephone numbers for them as well? Do you know where to look when you want to <strong>append relevant phone numbers</strong> to these records? Affluence Business Inc'
                             <strong>Phone Appending</strong> adds phone numbers and helps in connecting better to your customers and prospects. </p>
                         <p>For any telemarketing campaign to be successful, you need an <a href="/email-lists" title="Email List"><strong>accurate email list</strong></a> that connects you with prospects.</p>
-                        <p>Span Global Services enhances your existing <strong>database by appending</strong> missing phone numbers and replacing wrong phone numbers with updated ones. More importantly, it is also ensured that none of these phone numbers
+                        <p>Affluence Business Inc enhances your existing <strong>database by appending</strong> missing phone numbers and replacing wrong phone numbers with updated ones. More importantly, it is also ensured that none of these phone numbers
                             are on the ‘Do Not Call’ registry. </p>
                         <p>We cater to a variety of industries globally and our <strong>phone append</strong> line of services provides you with access to the largest repository of phone numbers that are thoroughly verified to deliver excellent result to
                             our customers. </p>
                         <h2 class="subhead-small-sub">Phone Appending Services aims to connect with your clients and accomplish your marketing goal</h2>
-                        <p>Our excellent Business <strong>telephone append services</strong> can help boost or even replace the role of a traditional marketing campaign. At Span Global Services, we utilize many different sources to provide you with unrivalled
+                        <p>Our excellent Business <strong>telephone append services</strong> can help boost or even replace the role of a traditional marketing campaign. At Affluence Business Inc, we utilize many different sources to provide you with unrivalled
                             accuracy and exceptional phone match rates.</p>
                         <p>Not only this, we can fine-tune our process and existing database to match your individual needs (business objective), goals and budget. The data we supply to our clients is updated monthly with fresh set of numbers. We are the
                             only <a href="/" title="Email Database Provider"><strong>email database provider</strong></a> that verifies each number against the telephone service provider database and update the file immediately.</p>
@@ -156,7 +156,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="/"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="/"><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -247,7 +247,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
