--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -25,10 +25,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 section-fpad wow fadeInLeft"><h2 class="subhead-small-blk">Privacy</h2>
-                    <p style="text-align:Justify;">Span Global Services respects and is committed to protect your
+                    <p style="text-align:Justify;">Affluence Business Inc respects and is committed to protect your
                         digital privacy. The following content of this page discloses and clarifies the information
-                        gathering, dissemination practices of and consequent security measures taken by Span Global
-                        Services (also referred to as "Span Global Services", "we", "our", and "us"). </p>
+                        gathering, dissemination practices of and consequent security measures taken by Affluence Business Inc
+                        Services (also referred to as "Affluence Business Inc", "we", "our", and "us"). </p>
                     <p style="text-align:Justify;">It is to note that this policy is no way supersedes, replaces, or
                         otherwise complements the privacy policy for our customers. This is merely a tool for users to
                         understand the vehement care that is taken while handling their precious personal data. </p>
@@ -36,11 +36,11 @@
                         agree to this Policy and the usage of personal data as stated henceforth, or amended
                         hereafter.</p>
                     <p style="text-align:Justify;"><strong>To report any violations or abuse of our services, or to
-                        enquire about this policy, contact Span Global Services by mail <a
-                                href="mailto:steve@affluencebizdata.com">info@affluencebusiness</a> or call 1
-                        (877) 755-0023 .</strong></p>
+                        enquire about this policy, contact Affluence Business Inc by mail <a
+                                href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a> or call 1
+                        307-213-7098 .</strong></p>
                     <h3 class="normal-head">Compliance References:</h3>
-                    <p style="text-align:Justify;">Span Global Services complies with all federal and state laws
+                    <p style="text-align:Justify;">Affluence Business Inc complies with all federal and state laws
                         (including GDPR) concerning data privacy and usage and adopt the subsequent guidelines,
                         procedures and best practices established by industry groups which we are a contributing member,
                         including the Direct Marketing Association (DMA).</p>
@@ -50,7 +50,7 @@
                         and data security measures. Also, we have provided answers to some of the prominent concerns
                         inherent to the trade wherever possible.</p>
                     <h3 class="normal-head">1. Data Compilation</h3>
-                    <p><strong>1.1.</strong>The information compiled by Span Global Services incorporates several data
+                    <p><strong>1.1.</strong>The information compiled by Affluence Business Inc incorporates several data
                         elements for businesses and consumers. The information is acquired from reliable sources and we
                         take utmost care through specific quality control procedures to verify and maintain the accuracy
                         of the said information.</p>
@@ -82,7 +82,7 @@
                         demographic profiles of our subscribers, clients, and visitors so we can improve the content of
                         our website and email alerts.</p>
                     <h3 class="normal-head">2. Disclosure and/or Sharing of Personal Information</h3>
-                    <p style="text-align:Justify;"><strong>2.1.</strong>Span Global Services reserves full ownership
+                    <p style="text-align:Justify;"><strong>2.1.</strong>Affluence Business Inc reserves full ownership
                         over the information collected on this domain <a href="https://www.affluencebusiness.com"
                                                                          title="affluence business">(https://www.affluencebusiness.com)</a>
                         and its subsidiaries. The said information is collected from reputed sources (Section 1.2) and
@@ -168,13 +168,13 @@
                         <li>Request for a machine-readable copy of the data we have of them.</li>
                     </ul>
                     <p style="text-align:Justify;">To exercise any of the rights listed above, please email us at <a
-                            href="mailto:steve@affluencebizdata.com">info@affluencebusiness </a>or write to us at
-                        the following address: Span Global Services, 297 Kingsbury Grade, Suite 100, Stateline, NV
+                            href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com </a>or write to us at
+                        the following address: Affluence Business Inc, 297 Kingsbury Grade, Suite 100, Stateline, NV
                         89449.</p>
                     <p style="text-align:Justify;"><strong>Please note:</strong> We cannot always delete records of all
                         historical data, and this is in compliance to legal audits and financial reporting purposes.</p>
                     <p><strong>2.4.2. Opt-out Policy:</strong></p>
-                    <p>Upon your request, Span Global Services will:</p>
+                    <p>Upon your request, Affluence Business Inc will:</p>
                     <ul class="space-list">
                         <li>Allow any subscriber to "opt out" of further promotional contacts/li&gt;</li>
                         <li>Use reasonable efforts to allow subscriber to update/correct personal information previously
@@ -199,16 +199,16 @@
                         data to other countries. We are obliged to provide a copy of said safeguards and related privacy
                         rights on request by the subjects in concern.</p>
                     <h3 class="normal-head">3. Data Security &amp; Confidentiality</h3>
-                    <p style="text-align:Justify;">At Span Global Services, we give utmost importance to safeguard your
+                    <p style="text-align:Justify;">At Affluence Business Inc, we give utmost importance to safeguard your
                         privacy, at every step of processing or storing your personal information. We take every step to
                         protect the confidentiality and security of the said data. We apply a state-of-the-art server
                         with the latest encryption. To provide you better services, without causing any disruption to
                         your experience with us, we may share your personal information only with partners whose
                         products/services are relevant to you.</p>
-                    <p style="text-align:Justify;"><strong>3.1.</strong> Span Global Services ensures that all customer
+                    <p style="text-align:Justify;"><strong>3.1.</strong> Affluence Business Inc ensures that all customer
                         data remains the property of the respective customers. We also do not use, rent, sell, transfer,
                         or otherwise expose the contents of the tracking information resulting from click-through,
-                        messages opened, messages read, or eCommerce conversions. Span Global Services provides an SSL
+                        messages opened, messages read, or eCommerce conversions. Affluence Business Inc provides an SSL
                         encrypted, password-protected mechanism for viewing and extracting customer data.</p>
                     <p style="text-align:Justify;"><strong>3.2.</strong> We maintain all customer data in a
                         carrier-class secure facility protected by firewalls and other security devices. These measures
@@ -220,22 +220,22 @@
                         processing. We restrict access to this information to only those employees who require the
                         information for business purposes.</p>
                     <h3 class="normal-head">4. Cookies &amp; Tracking Technologies</h3>
-                    <p><strong>Does Span Global Services use cookies?</strong></p>
-                    <p style="text-align:Justify;">Yes, like most websites, Span Global Services uses cookies to improve
+                    <p><strong>Does Affluence Business Inc use cookies?</strong></p>
+                    <p style="text-align:Justify;">Yes, like most websites, Affluence Business Inc uses cookies to improve
                         your experience in our website. Cookies help us keep a record of the behavior of users on our
                         website. Cookies help us in omitting irrelevant content from the site from time to time, and in
                         adding fresh relevant user-friendly content.</p>
-                    <p style="text-align:Justify;"><strong>How does Span Global Services' tracking technology
+                    <p style="text-align:Justify;"><strong>How does Affluence Business Inc' tracking technology
                         work?</strong></p>
-                    <p style="text-align:Justify;">Span Global Services uses single-pixel gif images to count web page
+                    <p style="text-align:Justify;">Affluence Business Inc uses single-pixel gif images to count web page
                         accesses and gather some general statistical information such as, if an email has been opened or
                         read. Collected information is tied to the users' personally identifiable information to provide
                         offers and improve the content of the site for the user. This profile is used to tailor a user’s
                         visit to our website and to direct pertinent marketing promotions to them. We do not share your
                         profile with other third parties.</p>
                     <h3 class="normal-head">5. Third-party Site Links</h3>
-                    <p style="text-align:Justify;">Span Global Services' website or messages may contain links to other
-                        (third-party) websites. Span Global Services is not responsible for the privacy practices or the
+                    <p style="text-align:Justify;">Affluence Business Inc' website or messages may contain links to other
+                        (third-party) websites. Affluence Business Inc is not responsible for the privacy practices or the
                         content of such "other" websites. Third parties may independently collect information about
                         website visitors when users view ads or other communications from third parties through Span
                         Global Services products or services. Visitors must contact the third-party companies directly
@@ -246,7 +246,7 @@
                         henceforth advice you to use such sites at your own risk.</p>
                     <h3 class="normal-head">6. Unsolicited Commercial Email (SPAM)</h3>
                     <ul class="space-list">
-                        <li>Span Global Services is committed to providing a permission-based model for email marketing.
+                        <li>Affluence Business Inc is committed to providing a permission-based model for email marketing.
                             To that end, we carry a strict internationally acclaimed anti-spam policy for all of our
                             clients.
                         </li>
@@ -259,7 +259,7 @@
                     </ul>
                     <p style="text-align:Justify;">These policies are part of our broader reaching Acceptable Use Policy
                         that each of our clients are contractually bound to. Violation of this policy will lead to
-                        speedy termination of all access to Span Global Services’ applications, servers, and
+                        speedy termination of all access to Affluence Business Inc’ applications, servers, and
                         network.</p>
                     <h3 class="normal-head">7. Campaign Content (Emails)</h3>
                     <p style="text-align:Justify;">We review the content of the email campaigns sent through our
@@ -268,7 +268,7 @@
                         filtering benefits all users who avail our services and it reduces bounces and ensures high
                         deliverability.</p>
                     <h3 class="normal-head">8. Changes to Privacy Policy</h3>
-                    <p style="text-align:Justify;">Span Global Services reserves the right to change any clause in the
+                    <p style="text-align:Justify;">Affluence Business Inc reserves the right to change any clause in the
                         privacy policy without any prior notice. We may also amend this Privacy Policy from time to
                         time, and therefore encourage you to revisit this page periodically or when you notice new
                         features on our website.</p>
@@ -279,8 +279,8 @@
                         qualification, accept to adhere by the above Privacy Policy.</strong></p>
                     <h3 class="normal-head">Questions and Suggestions</h3>
                     <p>For any queries, doubts, or suggestions regarding our privacy policy statement above, please
-                        contact Span Global Services at:</p>
-                    <p> Phone: 1 (877) 755-0023<br>Email: <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>
+                        contact Affluence Business Inc at:</p>
+                    <p> Phone:307-213-7098<br>Email: <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>
                     </p>
                     <p><strong>Postal Address</strong> : <br>affluence business<br> 297 Kingsbury Grade, Suite 100,
                         Stateline, NV 89449</p></div>
