--- a/templates/professional-lists.html
+++ b/templates/professional-lists.html
@@ -8,7 +8,7 @@
                     <div class="col-lg-6 mb-3 wow fadeInLeft"></div>
                     <div class="col-lg-6 mb-3 wow fadeInLeft">
                         <h1>100% Trusted Professional Email List</h1>
-                        <p>Choose Span Global Services to Enjoy Premium Company with C-level Executives as Your
+                        <p>Choose Affluence Business Inc to Enjoy Premium Company with C-level Executives as Your
                             Customers</p>
                         <div class="mt-4"> <a href="#" data-toggle="modal" data-target="#send-message"
                                 class="white-br-btn circle-fa">Book Your Data &nbsp; <i
@@ -177,7 +177,7 @@
                             towards a successful career, their plate remains full, 24x7. Punctuality and professionalism
                             are paramount to these individuals, and to reach them; your marketing game must be
                             top-notch. If you’re looking for the solution that will help you seal the deal with them,
-                            Span Global Services’Professionals email marketing database is what you need.</p>
+                            Affluence Business Inc’Professionals email marketing database is what you need.</p>
                         <p style="text-align:Justify;">The <strong>professional sector of C-suite</strong> workers has
                             been one of the sprawling ones in the USA. With over 2,100,000 top executives currently
                             employed, this is a brimming window for marketers looking to engage with premium clientele.
@@ -194,7 +194,7 @@
                             deplete the sales team’s morale with unfulfilling results. To assure profits and successful
                             email campaigns, you need lists that consistently deliver results with fool-proof data.
                             While doing so, your team’s focus remains on crafting the best pitches, thus securing the
-                            top-tier leads quicker and better. If you’re looking for the same, Span Global Services is
+                            top-tier leads quicker and better. If you’re looking for the same, Affluence Business Inc is
                             here to help. </p>
                     </div>
                     <div class="col-lg-5 mb-4 wow fadeInRight">
@@ -387,7 +387,7 @@
                         <h2 class="subhead-small-blk">Partner with this Industry’s Big Players and Garner a Customer
                             Circle of High-Tier Clients Easily</h2>
                         <p style="text-align:Justify;">Data providing holds the immaculate power of either making or
-                            breaking an email marketing campaign. Having been in this business for years, Span Global
+                            breaking an email marketing campaign. Having been in this business for years, Affluence Business Inc
                             Services knows the mistakes to avoid and the opportunities to capitalize. To help our
                             clients win, we utilize our strong suits and help them conduct successful campaigns left and
                             right.</p>
@@ -425,7 +425,7 @@
                                     onsubmit="return fnValidationContactside()"
                                     action=" "
                                     enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                        value="Contact Details from Span Global Services">
+                                        value="Contact Details from Affluence Business Inc">
 
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname"
