--- a/templates/professional-lists/attorney-email-list.html
+++ b/templates/professional-lists/attorney-email-list.html
@@ -25,8 +25,8 @@
           <div class="col-lg-7 section-fpad wow fadeInLeft">
                <h2 class="subhead-small-blk">Get Direct Access to Lawyers Email Address and Expand Your Business</h2>
 			   
-			   <p style="text-align:Justify;">Obtain verified and highly-accurate attorney email list from <a href=/ title="Span Global Services"><strong>Span Global Services</strong></a> and promote your products and services to Attorneys and Lawyers. These legal professionals who offer expertise or services in particular areas of law including corporate, real estate, criminal, family and estate, etc. have quite a bunch of responsibilities on their to-do lists. As a result, contacting them for business services can be a challenge. But, Span Global Services can help you accomplish this task in no time!</p>
-			   <p style="text-align:Justify;">According to statistics, the projected revenue of the legal services industry in the US will reach a value of <strong>USD 348.5 billion by the year 2024</strong>. Seize the opportunities this sector has to offer with our authentic <strong>Attorney Email Address</strong>. Time is money when it comes to your marketing campaigns! So, don’t waste time on middle-men, office assistants and the likes. Span Global Services Lawyer Email List lets you directly target highly-qualified lawyers and attorneys from multiple regions, businesses, law agencies, law firms, corporate houses, government agencies, etc. so you get increased engagements and more conversions.</p>
+			   <p style="text-align:Justify;">Obtain verified and highly-accurate attorney email list from <a href=/ title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> and promote your products and services to Attorneys and Lawyers. These legal professionals who offer expertise or services in particular areas of law including corporate, real estate, criminal, family and estate, etc. have quite a bunch of responsibilities on their to-do lists. As a result, contacting them for business services can be a challenge. But, Affluence Business Inc can help you accomplish this task in no time!</p>
+			   <p style="text-align:Justify;">According to statistics, the projected revenue of the legal services industry in the US will reach a value of <strong>USD 348.5 billion by the year 2024</strong>. Seize the opportunities this sector has to offer with our authentic <strong>Attorney Email Address</strong>. Time is money when it comes to your marketing campaigns! So, don’t waste time on middle-men, office assistants and the likes. Affluence Business Inc Lawyer Email List lets you directly target highly-qualified lawyers and attorneys from multiple regions, businesses, law agencies, law firms, corporate houses, government agencies, etc. so you get increased engagements and more conversions.</p>
 			   
 			    <h2 class="subhead-small-blk">Customize your Attorney Email Customers List by </h2>
 			   
@@ -71,7 +71,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -376,7 +376,7 @@
           </div>
           <div class="col-lg-6 mb-4 wow fadeInRight mb-sec">
           	<div class="pad-sec mb-sec">
-			  <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Lawyers Mailing List</h2> 
+			  <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Lawyers Mailing List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -408,7 +408,7 @@
 		
 			<h2 class="subhead-small-blk">Leverage Data-rich Lawyers Email Address to Form Lasting Business Connections</h2>  
                 
-                <p style="text-align:Justify;">The low quality of data impacts your marketing and can render it useless. In fact, about 42% of B2B marketers are affected by a lack of quality data. We, at Span Global Services, understand how much effort and strategizing goes into developing your marketing campaigns. Therefore, our attorney mailing lists ensures you always get your hands on 100% authentic data with a 95% deliverability rate.</p>
+                <p style="text-align:Justify;">The low quality of data impacts your marketing and can render it useless. In fact, about 42% of B2B marketers are affected by a lack of quality data. We, at Affluence Business Inc, understand how much effort and strategizing goes into developing your marketing campaigns. Therefore, our attorney mailing lists ensures you always get your hands on 100% authentic data with a 95% deliverability rate.</p>
 				<p style="text-align:Justify;">Our highly responsive <a href="/buy-targeted-email-list"><strong>targeted email lists</strong></a> include information across 70+ data fields to capture the correct B2B sales leads, including name, email address, company name, contact number, postal address, NAICS code, country name, SIC code, ZIP code, telephone number, and many more.</p>
 		</div>
 		
@@ -422,11 +422,11 @@
 		</div>
           
           <div class="col-lg-12 wow fadeInLeft">
-          	<h2 class="subhead-small-blk text-center">Scale Your ROIs Rapidly with Attorney Email Address from Span Global Services</h2>
-			<p style="text-align:Justify;">Span Global Services skilled team of data experts performs <a href="/data-appending"><strong>data append</strong></a> and <a href="/data-enrichment-services"><strong>data enrichment</strong></a> procedures to get rid of any errors, redundancies and duplicities in data. Moreover, the data undergoes multiple vetting processes to ensure that our database is full of relevant and fresh data at all times. Our attorneys mailing list will help you reach verified sales prospects by collating data from legal and trustworthy sources only. These include business cards, websites, press conferences, public surveys, yellow pages, seminars, feedback forms, industry directories, government and public records, and many more. With such consent-based information, you can stay assured that your message always hits the right inbox.</p>
-			<p style="text-align:Justify;">Creating and maintaining a home-grown <strong>Lawyer Email Address</strong> can take a lot of research. Also, time and budget are often restricted for a campaign. Let Span Global Services do the hard work on your behalf so that your sales and marketing teams can focus on strategizing the perfect marketing campaign.</p>
+          	<h2 class="subhead-small-blk text-center">Scale Your ROIs Rapidly with Attorney Email Address from Affluence Business Inc</h2>
+			<p style="text-align:Justify;">Affluence Business Inc skilled team of data experts performs <a href="/data-appending"><strong>data append</strong></a> and <a href="/data-enrichment-services"><strong>data enrichment</strong></a> procedures to get rid of any errors, redundancies and duplicities in data. Moreover, the data undergoes multiple vetting processes to ensure that our database is full of relevant and fresh data at all times. Our attorneys mailing list will help you reach verified sales prospects by collating data from legal and trustworthy sources only. These include business cards, websites, press conferences, public surveys, yellow pages, seminars, feedback forms, industry directories, government and public records, and many more. With such consent-based information, you can stay assured that your message always hits the right inbox.</p>
+			<p style="text-align:Justify;">Creating and maintaining a home-grown <strong>Lawyer Email Address</strong> can take a lot of research. Also, time and budget are often restricted for a campaign. Let Affluence Business Inc do the hard work on your behalf so that your sales and marketing teams can focus on strategizing the perfect marketing campaign.</p>
 			<p style="text-align:Justify;">In the US only, there are over 1.33 million lawyers. Thus, the opportunity is abundant for your business to flourish in the region. Still, you need not limit yourself to a specific boundary because our lawyers contact list can provide you geo-centric insights on lawyers and attorneys from across the Middle East, Asia, UK, Europe, Australia and more.</p>
-			<p style="text-align:Justify;">Your search for the perfect data partner ends here with Span Global Services. We have over 15 years of experience in the industry. Having served Fortune 500 and Fortune 1000 clients, we know what works for your business better than anyone. Still confused? Well, give our services a try by asking for a free <strong>Lawyers Email Database today</strong>!</p>
+			<p style="text-align:Justify;">Your search for the perfect data partner ends here with Affluence Business Inc. We have over 15 years of experience in the industry. Having served Fortune 500 and Fortune 1000 clients, we know what works for your business better than anyone. Still confused? Well, give our services a try by asking for a free <strong>Lawyers Email Database today</strong>!</p>
 			
 			<div class="mb-4 mt-4 text-center">
 				<a href="#" data-toggle="modal" data-target="#send-message" class="green-btn circle-fa">Get Your FREE Sample Today! &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
@@ -576,7 +576,7 @@
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
