--- a/templates/professional-lists/ceo-email-list.html
+++ b/templates/professional-lists/ceo-email-list.html
@@ -30,7 +30,7 @@
                             that matter. The question is - Are you reaching out to the right professionals with the right message? </p>
                         <p style="text-align:Justify;">Your only hope is to have a <a href="/email-lists" title="Targeted Email Lists"><strong>targeted email list</strong></a> under your belt that connects you directly with the CEOs of your target
                             industry. And since procurement and maintenance of such a <a href="/"><strong>professionals email</strong></a> is a time-consuming and painstaking task, it is best to relay
-                            such needs to the data experts of Span Global Services!</p>
+                            such needs to the data experts of Affluence Business Inc!</p>
                         <h2 class="subhead-small-blk">Customize your CEO Email Database List by</h2>
                         <div class="row respo-icon">
                             <div class="col-lg-2 wow fadeInLeft text-center" style="visibility: visible; animation-name: fadeInLeft;"> <img src="/static/assets/img/assets-size.png" alt="assets-size" title="assets-size" class="respo-img">
@@ -59,7 +59,7 @@
                                 <h4>GET A FREE QUOTE</h4>
                                 <p>We have got you covered on all your email and direct marketing needs</p>
                                 <div class="form">
-                                    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -163,7 +163,7 @@
                     <div class="col-lg-6 mb-4 wow fadeInLeft mb-sec">
                         <div class="pad-sec mb-sec">
                             <h2 class="subhead-small-blk mb-sec">Identify the Best Target Audience and Determine the Most Effective Ways to Deliver Your Message</h2>
-                            <p style="text-align:Justify;">Your target audience, even CEOs, have their preferred channels of communication. And when contacted via those, you give yourself a better chance at attracting and engaging them with your brand. Span Global Services’ <strong>Chief Executives Email List</strong>                                will aid you in reaching out to your target groups of CEOs across different marketing channels via comprehensive and accurate information. Want to send a highly thoughtful and personalized email? Great! Maybe you’d like
+                            <p style="text-align:Justify;">Your target audience, even CEOs, have their preferred channels of communication. And when contacted via those, you give yourself a better chance at attracting and engaging them with your brand. Affluence Business Inc’ <strong>Chief Executives Email List</strong>                                will aid you in reaching out to your target groups of CEOs across different marketing channels via comprehensive and accurate information. Want to send a highly thoughtful and personalized email? Great! Maybe you’d like
                                 to try your hands on cold calling too? No problem! Leverage all opportunities at your disposal for desired results.</p>
                             <div class="mt-4"> <a href="/request-quote" class="dgreen-btn circle-fa">Request A Quote &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div>
                         </div>
@@ -191,7 +191,7 @@
                 <div class="row ">
                     <div class="col-lg-5 mb-4 wow fadeInLeft">
                         <div class="dark-green ">
-                            <h2>Why Choose Span Global Services as Your Data Partner</h2>
+                            <h2>Why Choose Affluence Business Inc as Your Data Partner</h2>
                         </div>
                     </div>
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
@@ -227,7 +227,7 @@
                         </ul>
                         <p style="text-align:Justify;">Cultivating good-quality data for your targeted <a href="/b2b-email-list" title="Business Email List"><strong>business email list</strong></a> and maintaining its integrity at all times will ensure
                             data accuracy, completeness, uniqueness, consistency, and timeliness. Such a database is sure to reap rich business rewards. </p>
-                        <p style="text-align:Justify;">Span Global Services’ <a href="/" title="Professional email lists"><strong>Professional Email Lists</strong></a> cover all the above criteria for a robust and thorough customer
+                        <p style="text-align:Justify;">Affluence Business Inc’ <a href="/" title="Professional email lists"><strong>Professional Email Lists</strong></a> cover all the above criteria for a robust and thorough customer
                             database and we run frequent verification and hygiene checks to ensure that even if data is going stale, it is taken care of at the get-go. </p>
                         <p style="text-align:Justify;">With our <strong>Chief Executive Officer Email Database</strong>, you can avoid high email bounce-backs, low CTRs, and poor response rates. Plus, you can do all of this without having to empty your pockets! Our Chief Executives
                             mailing address database is available at affordable costs so that your profits do not hurt you in any way.</p>
@@ -254,8 +254,8 @@
                                             </div>
                                             <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
                                                 <div class="card-body">
-                                                    <p>The most efficient way to get your <strong>CEO Mailing List</strong> is to buy one from Span Global Services. We offer customized, cost-efficient email lists to suit your specific business needs. Just
-                                                        browse through our website and choose the ‘<a href="/contact-us" title="Buy Now">Buy Now</a>’ option or drop a mail at <a href="mailto:info@affluencebusiness">info@affluencebusiness</a>                                                        to discuss your requirements.</p>
+                                                    <p>The most efficient way to get your <strong>CEO Mailing List</strong> is to buy one from Affluence Business Inc. We offer customized, cost-efficient email lists to suit your specific business needs. Just
+                                                        browse through our website and choose the ‘<a href="/contact-us" title="Buy Now">Buy Now</a>’ option or drop a mail at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>                                                        to discuss your requirements.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -278,7 +278,7 @@
                                             </div>
                                             <div id="collapseThree" class="collapse " aria-labelledby="headingThree" data-parent="#accordionExample">
                                                 <div class="card-body">
-                                                    <p>Absolutely! At Span Global Services, we are aware that you might need specific details that align with your outreach model. Therefore, we provide <strong>CEO Marketing Lists</strong> that can be customized
+                                                    <p>Absolutely! At Affluence Business Inc, we are aware that you might need specific details that align with your outreach model. Therefore, we provide <strong>CEO Marketing Lists</strong> that can be customized
                                                         as per your requirements to connect with extensive details of the prospects suited to your business.</p>
                                                 </div>
                                             </div>
@@ -427,7 +427,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
