--- a/templates/professional-lists/cfo-email-list.html
+++ b/templates/professional-lists/cfo-email-list.html
@@ -24,11 +24,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
-                        <h2 class="subhead-small-blk">Target Top CFOs with Span Global Services’ Customized Mailing Lists</h2>
+                        <h2 class="subhead-small-blk">Target Top CFOs with Affluence Business Inc’ Customized Mailing Lists</h2>
                         <p style="text-align:Justify;">The CFO or the Chief Financial Officer of a company is a senior executive who manages all the finances and financial activities of the company. Getting in touch with the top CFOs can give your marketing campaigns the boost it needs.
                             An organized list of <strong>CFO Contact Database</strong> might be just what you need to promote your brand across countries through various multi-channel marketing platforms. </p>
                         <p style="text-align:Justify;">Targeting the top CFOs can be beneficial for your business because they are the key decision-makers and officials in any company. CFOs occupy an indispensable position on the company’s board of executives. A <strong>CFO Mailing List</strong>                            will connect you with the CFOs of the most reputed and high-performing companies in the country of your choice. This can bring a fresh perspective to your targeted B2B marketing strategies.</p>
-                        <p style="text-align:Justify;">At <a href=/ title="Span Global Services"><strong>Span Global Services</strong></a>, we have a 100% accurate database of <strong>Chief Financial Officer Email Addresses</strong>. With our 95%
+                        <p style="text-align:Justify;">At <a href=/ title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a>, we have a 100% accurate database of <strong>Chief Financial Officer Email Addresses</strong>. With our 95%
                             deliverability guarantee, we promise to bring to you the most reliable sales-ready leads so that you can grow your business in record time.</p>
                         <h2 class="subhead-small-blk">Customize your CFO Email Database List by</h2>
                         <div class="row respo-icon">
@@ -58,7 +58,7 @@
                                 <h4>GET A FREE QUOTE</h4>
                                 <p>We have got you covered on all your email and direct marketing needs</p>
                                 <div class="form">
-                                    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -179,8 +179,8 @@
                     <div class="col-lg-6 mb-4 wow fadeInLeft">
                         <h2 class="subhead-small-blk text-center">Data Fields We Provide Includes</h2><a href="#requestquote"><img class="respo-img" src="/static/assets/img/CFO-Data-Fields.jpg" alt="CFO-Data-Fields"></a> </div>
                     <div class="col-lg-6 mb-4 wow fadeInRight">
-                        <h2 class="subhead-small-blk">Why Span Global Services is Your Ideal Data Partner?</h2>
-                        <p style="text-align:Justify;">At Span Global Services, we provide mailing lists that are 100% accurate and obtained from credible sources. Our <a href="/email-lists" title="Email Database"><strong>email database</strong></a>                            undergoes routine data cleansing so that we can serve you with the most recent and updated data. Our <a href="/b2b-email-list" title="B2B Email Lists"><strong>B2B Email Lists</strong></a> can
+                        <h2 class="subhead-small-blk">Why Affluence Business Inc is Your Ideal Data Partner?</h2>
+                        <p style="text-align:Justify;">At Affluence Business Inc, we provide mailing lists that are 100% accurate and obtained from credible sources. Our <a href="/email-lists" title="Email Database"><strong>email database</strong></a>                            undergoes routine data cleansing so that we can serve you with the most recent and updated data. Our <a href="/b2b-email-list" title="B2B Email Lists"><strong>B2B Email Lists</strong></a> can
                             get you in touch with the top executives for maximum campaign response and marketing success. </p>
                         <p style="text-align:Justify;">Besides being premium and top-grade, our services are also highly cost-effective. Getting your <strong>CFO Sales Leads</strong> from us will also save you time since our services are entirely consent-based and we will only connect
                             you with the most sales-ready leads, while filtering out the cold contacts. </p>
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
-                        <p style="text-align:Justify;">Span Global Services’ database of <strong>CFO Email Addresses</strong> has detailed information about the top CFOs across several industries. You can expect to find several important details in our segmented email lists, such as,
+                        <p style="text-align:Justify;">Affluence Business Inc’ database of <strong>CFO Email Addresses</strong> has detailed information about the top CFOs across several industries. You can expect to find several important details in our segmented email lists, such as,
                             the company name, SIC code, number of employees, sales, revenue, date of establishment etc. Industry-wise, you can expect to find mailing lists like Finance and Banking CFO email list, and CFO email lists pertaining to Real
                             Estate Industry, Healthcare Industry, Manufacturing Industry, etc. </p>
                         <p style="text-align:Justify;">With our <strong>CFO Contact Data</strong>, you can either target your local businesses or you can give your brand an international presence. Our global master database covers several regions such as Canada, USA, UK, Australia,
@@ -219,7 +219,7 @@
                             <p style="text-align:Justify;">Getting a list of email addresses of CFOs will get you in touch with the top C-level executives of organizations across the world. You will obtain relevant business contacts that will help you make well-informed decisions.
                                 Our customized list of <strong>CFO Email Addresses</strong>, segregated via category is cost effective and highly responsive. Connecting with the top CFOs will help you vastly promote your brand name, improve sales and
                                 help generate higher ROIs. It will give your marketing strategies an edge and bring exposure to your brand. </p>
-                            <p style="text-align:Justify;">Get in touch with Span Global Services today and obtain your <strong>CFO Executives Data</strong> to take your B2B marketing game to the next level!</p>
+                            <p style="text-align:Justify;">Get in touch with Affluence Business Inc today and obtain your <strong>CFO Executives Data</strong> to take your B2B marketing game to the next level!</p>
                             <div class="col-lg-12 wow fadeInLeft"> </div>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                                             </div>
                                             <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordionExample">
                                                 <div class="card-body">
-                                                    <p>Span Global Services’ premium <strong>CFO Email List</strong> will take your marketing campaigns to a whole new level. With high-quality, targeted data, your sales teams will easily overcome poor response
+                                                    <p>Affluence Business Inc’ premium <strong>CFO Email List</strong> will take your marketing campaigns to a whole new level. With high-quality, targeted data, your sales teams will easily overcome poor response
                                                         rates, low CTRs, and high email bounce rates.</p>
                                                 </div>
                                             </div>
@@ -264,7 +264,7 @@
                                             </div>
                                             <div id="collapseThree" class="collapse " aria-labelledby="headingthree" data-parent="#accordionExample">
                                                 <div class="card-body">
-                                                    <p>Span Global Services’ <strong>CFO Marketing Database</strong> contains contacts with a wide range of useful data fields. These include full name, email address, ZIP code, NAICS code, postal address,
+                                                    <p>Affluence Business Inc’ <strong>CFO Marketing Database</strong> contains contacts with a wide range of useful data fields. These include full name, email address, ZIP code, NAICS code, postal address,
                                                         company name, number of employees, industry, SIC code, and many more.</p>
                                                 </div>
                                             </div>
@@ -413,7 +413,7 @@
                     <div class="col-lg-7 wow fadeInRight">
                         <div class="contact-quote">
                             <div class="form">
-                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                                <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                         <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
