--- a/templates/professional-lists/cio-email-list.html
+++ b/templates/professional-lists/cio-email-list.html
@@ -26,7 +26,7 @@
           <h2 class="subhead-small-blk">Exhaustive CIO Email Marketing List</h2>
           <p style="text-align:Justify;">The CIO or <strong>Chief Information Officer</strong> is the C-level executive
             working with the department of Information Technology and computer systems. The CIO is an integral part of
-            the business, responsible for formulating different goals. Span Global Services brings to users a
+            the business, responsible for formulating different goals. Affluence Business Inc brings to users a
             comprehensive CIO mailing list that fosters brand building and lead generation through global campaigns.</p>
           <p style="text-align:Justify;">The <strong>CIO Mailing List</strong> is thus integral for targeted marketing
             campaigns. The robust CIO contact data is certain to amplify campaign success and assist in brand building
@@ -38,7 +38,7 @@
           <p style="text-align:Justify;">Our comprehensive <strong>CIO Email Database</strong> ensures that marketers
             reach CIOs across businesses through direct, online or telemarketing campaigns. </p>
           <p style="text-align:Justify;">In addition to the type of lead generated, how one reaches the targeted
-            audience base often plays a crucial role in business success. At Span Global Services we provide <strong>CIO
+            audience base often plays a crucial role in business success. At Affluence Business Inc we provide <strong>CIO
               Email Address Lists</strong> that can significantly help marketers reach CIOs from across industries with
             their services and offers.</p>
           <p style="text-align:Justify;">The list has been compiled from business directories and validated to ensure
@@ -87,7 +87,7 @@
                 <form name="f12" id="contact-form" action=" "
                   method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                     value=" "><input name="title" type="hidden"
-                    value="Contact Request from Span Global Services">
+                    value="Contact Request from Affluence Business Inc">
                   <div class=" form-row">
                     <div class="col-lg-6 form-group">
                       <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname"
@@ -281,11 +281,11 @@
             <h2 class="subhead-small-blk">Achieve Business Excellence and Unmatched Business Growth with CIO Mailing
               List</h2>
             <p style="text-align:Justify;">Most organizations cannot function without information systems and computers.
-              Therefore, the role of the CIO is a pivotal one and at Span Global Services we understand the importance
+              Therefore, the role of the CIO is a pivotal one and at Affluence Business Inc we understand the importance
               of authentic mailing data to reach them. Therefore, we provide <strong>CIO Mailing List</strong> that can
               maximize campaign success and help in effective brand building.</p>
             <p style="text-align:Justify;">At <a href=/
-                title="Span Global Services"><strong>Span Global Services</strong></a>, the CIO email list is
+                title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a>, the CIO email list is
               systematically compiled and validated to ensure that B2B campaigns are delivered to a niche audience base
               without any glitches. The versatile <a href="/"
                 title="Professional email lists"><strong>professional email list</strong></a> is ideal for promotion of
@@ -393,7 +393,7 @@
                     <div id="collapseThree" class="collapse " aria-labelledby="headingThree"
                       data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>Span Global Services’ authentic <strong>CIO Email Database</strong> will let you form
+                        <p>Affluence Business Inc’ authentic <strong>CIO Email Database</strong> will let you form
                           profitable connections with top-tier CIOs from organizations across multiple regions such as
                           the UK, US, APEC, Middle East, Asia, Europe, and more.</p>
                       </div>
@@ -566,7 +566,7 @@
             <div class="form">
               <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()"
                 action=" " enctype="multipart/form-data"> <input
-                  name="subject" type="hidden" value="Contact Details from Span Global Services"> <input
+                  name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input
                   name="redirect_url" type="hidden" value=" ">
                 <div class=" form-row">
                   <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname"
