--- a/templates/professional-lists/cmo-email-list.html
+++ b/templates/professional-lists/cmo-email-list.html
@@ -30,7 +30,7 @@
                             the professionals are – a saying every marketer is aware of, especially true if you’re a
                             healthcare marketer. In an industrial sector that is infamous for lengthy and tedious sales
                             cycles, it can be painful to have to see your numbers declining or remaining stagnant. </p>
-                        <p style="text-align:Justify;">Thankfully, with Span Global Services’ <Strong>CMO mailing
+                        <p style="text-align:Justify;">Thankfully, with Affluence Business Inc’ <Strong>CMO mailing
                                 database</strong>, you can say goodbye to all your data-related woes! Our email lists
                             are robust, 100% accurate, and at least 95% deliverable for maximum campaign response.</p>
                         <p style="text-align:Justify;">Using our mailing list services, you can not only attract and
@@ -88,7 +88,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -498,7 +498,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
