--- a/templates/professional-lists/cpa-email-list.html
+++ b/templates/professional-lists/cpa-email-list.html
@@ -33,7 +33,7 @@
                               sell more, but establish a target audience in any part of the world. Moreover, our
                               services are completely genuine, and our databases are regularly updated to deliver you
                               high conversion rates and ROIs with guaranteed 95% deliverability and 100% accuracy.</p>
-                         <p style="text-align:Justify;">Span Global Services strives to provide the best solutions in
+                         <p style="text-align:Justify;">Affluence Business Inc strives to provide the best solutions in
                               this, with our massive database of accurate, verified, and fresh customer data, for
                               successful multi-channel marketing. If you&rsquo;re a marketer and are looking to target
                               public <strong>Accountants Email Database</strong> to grow your business, our CPA Email
@@ -90,7 +90,7 @@
                                              action=" " method="post"
                                              onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                                   value=" "><input name="title"
-                                                  type="hidden" value="Contact Request from Span Global Services">
+                                                  type="hidden" value="Contact Request from Affluence Business Inc">
                                              <div class=" form-row">
                                                   <div class="col-lg-6 form-group">
                                                        <div class="input-container"> <input type="text" name="fname"
@@ -304,7 +304,7 @@
                     <div class="col-lg-6 geotargeted-list-sgs wow fadeInLeft"> </div>
                     <div class="col-lg-6 mb-4 wow fadeInRight mb-sec">
                          <div class="pad-sec mb-sec">
-                              <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ CPA Email Users
+                              <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ CPA Email Users
                                    List</h2>
                               <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                         title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+
@@ -361,14 +361,14 @@
                <div class="col-lg-12 wow fadeInLeft">
                     <h2 class="subhead-small-blk text-center">Establish Global Connections with Our CPA Email Lists</h2>
                     <p style="text-align: justify;">To create a strong brand image, you must reach out to the right
-                         contacts. Span Global Services has made of name for doing exactly that&mdash;equipping its
+                         contacts. Affluence Business Inc has made of name for doing exactly that&mdash;equipping its
                          clientele with customer data about key professionals from all across the globe. Our <strong>CPA
                               Mailing Lists</strong> are result-driven and have been crafted to provide the most
                          holistic customer data so that you can experience benefits like low bounce-backs, high CTRs,
                          high ROIs, better brand engagement, etc.</p>
                     <p style="text-align: justify;">There are two significant database procedures done to ensure
                          accurate and quality data at all times. These two procedures are Data Append and Data
-                         Enrichment. They are performed by Span Global Services' professional team of data experts to
+                         Enrichment. They are performed by Affluence Business Inc' professional team of data experts to
                          eliminate any errors, redundancies, and duplicities in data. Furthermore, the data is subjected
                          to several screening processes to ensure that our database is always full of relevant and
                          current information.</p>
@@ -378,11 +378,11 @@
                          yellow pages, seminars, feedback forms, industry directories, government and public records,
                          and many more. With such consent-based information, you can stay assured that your message
                          always land up in the right inbox.</p>
-                    <p style="text-align: justify;">At Span Global Services, our strength lies in building formidable
+                    <p style="text-align: justify;">At Affluence Business Inc, our strength lies in building formidable
                          marketing lists. Your focus as a marketer, therefore, must lie in sales and marketing, market
                          research, brand promotion, audience engagement and many other business activities. So why not
                          work on that and allow us to meet your <strong>Accountant Email List</strong> data needs? So do
-                         not ponder over much, nor be laid back. Procure Accountants mailing list from Span Global
+                         not ponder over much, nor be laid back. Procure Accountants mailing list from Affluence Business Inc
                          Services today!</p>
                     <div class="mb-4 mt-4 text-center"><a href="#" data-toggle="modal" data-target="#send-message"
                               class="green-btn circle-fa">Get Your FREE Sample Today! &nbsp; <i
@@ -412,7 +412,7 @@
                                                   <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                                        data-parent="#accordionExample">
                                                        <div class="card-body">
-                                                            <p>Span Global Services is the industry-leading provider of
+                                                            <p>Affluence Business Inc is the industry-leading provider of
                                                                  top-notch <strong>CPA Mailing Lists</strong>. Our
                                                                  dedicated team of data experts and researchers work
                                                                  round the clock to deliver high-quality data to power
@@ -432,7 +432,7 @@
                                                   <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
                                                        data-parent="#accordionExample">
                                                        <div class="card-body">
-                                                            <p>Not at all. At Span Global Services, we believe in
+                                                            <p>Not at all. At Affluence Business Inc, we believe in
                                                                  versatility. Thus, our <strong>Accountant Email
                                                                       Database</strong> will help you run bespoke
                                                                  marketing campaigns across multiple channels including
@@ -657,7 +657,7 @@
                                         onsubmit="return fnValidationContactside()"
                                         action=" "
                                         enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                             value="Contact Details from Span Global Services"> <input
+                                             value="Contact Details from Affluence Business Inc"> <input
                                              name="redirect_url" type="hidden"
                                              value=" ">
                                         <div class=" form-row">
