--- a/templates/professional-lists/cto-email-list.html
+++ b/templates/professional-lists/cto-email-list.html
@@ -98,7 +98,7 @@
                                              action=" " method="post"
                                              onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                                   value=" "><input name="title"
-                                                  type="hidden" value="Contact Request from Span Global Services">
+                                                  type="hidden" value="Contact Request from Affluence Business Inc">
                                              <div class=" form-row">
                                                   <div class="col-lg-6 form-group">
                                                        <div class="input-container"> <input type="text" name="fname"
@@ -308,7 +308,7 @@
                     <div class="col-lg-6 mb-4 wow fadeInLeft">
                          <div class="pad-sec">
                               <h2 class="subhead-small-blk">Enhance Business with CTO Mailing Database</h2>
-                              <p style="text-align:Justify;">Span Global Services provides segmented <strong>mailing
+                              <p style="text-align:Justify;">Affluence Business Inc provides segmented <strong>mailing
                                         list of CTOs</strong> to assist global campaigns. We lay emphasis on targeted
                                    and segmented data to help brands achieve unmatched campaign success. The well
                                    curated and exhaustive data sets ensure that marketers gain the competitive edge. It
@@ -338,7 +338,7 @@
                     </div>
                     <div class="col-lg-6 mb-4 wow fadeInRight">
                          <h2 class="subhead-small-blk">Enhance Campaign Growth with Tele-verified CTO Email List</h2>
-                         <p style="text-align:Justify;">Span Global Services provides one of the most thoroughly
+                         <p style="text-align:Justify;">Affluence Business Inc provides one of the most thoroughly
                               verified mailing list of CTOs. The <a
                                    href="/"
                                    title="geo-targeted mailing list"><strong>geo-targeted mailing list</strong></a> is a
@@ -640,7 +640,7 @@
                                         onsubmit="return fnValidationContactside()"
                                         action=" "
                                         enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                             value="Contact Details from Span Global Services"> <input
+                                             value="Contact Details from Affluence Business Inc"> <input
                                              name="redirect_url" type="hidden"
                                              value=" ">
                                         <div class=" form-row">
