--- a/templates/professional-lists/hr-executives-mailing-list.html
+++ b/templates/professional-lists/hr-executives-mailing-list.html
@@ -23,10 +23,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 section-fpad wow fadeInLeft">
-                    <h2 class="subhead-small-blk mb-sec">Avail Targeted HR Mailing Lists from Span Global Services and
+                    <h2 class="subhead-small-blk mb-sec">Avail Targeted HR Mailing Lists from Affluence Business Inc and
                         Boost Your Campaign</h2>
                     <p style="text-align: justify;">Procure the best-in-class <strong>HR Email List</strong> that is
-                        highly-targeted, accurate, and timely-verified, from Span Global Services and boost your sales
+                        highly-targeted, accurate, and timely-verified, from Affluence Business Inc and boost your sales
                         and marketing campaigns to generate significant ROI. Put all of your expertise in building
                         immaculate products, services, and solutions; and all of your efforts in preparing impeccable
                         marketing collaterals, while leaving the responsibility of targeting your niche audience to us.
@@ -37,7 +37,7 @@
                         limited to training and recruitment. They do multiple hats and play a strategic role in every
                         organization. HR executives are potent agents of change and take part in crucial decision-making
                         processes. Thus, it is no wonder that their ever-evolving busy role makes them difficult to
-                        reach out to. With targeted and accurate <strong>HR Mailing Lists</strong> from Span Global
+                        reach out to. With targeted and accurate <strong>HR Mailing Lists</strong> from Affluence Business Inc
                         Services, you can seamlessly connect and market your products and services to the key prospects!
                     </p>
                     <h2 class="subhead-small-blk">Customize your HR Managers Lists by</h2>
@@ -90,7 +90,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -301,7 +301,7 @@
                 <div class="col-lg-6 geotargeted-list-sgs wow fadeInLeft mb-sec"> </div>
                 <div class="col-lg-6 mb-4 wow fadeInRight">
                     <div class="pad-sec">
-                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Span Global Services’ HR Managers
+                        <h2 class="subhead-small-blk mb-sec">Benefits of Procuring Affluence Business Inc’ HR Managers
                             Email Lists</h2>
                         <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -342,7 +342,7 @@
                         thing you would want to see. Partnering with us can get you connected with your ideal audience,
                         FAST, but not at the expense of profitability.</p>
                     <p style="text-align: justify;">So, choose the industry expertise, experience, and data intelligence
-                        of Span Global Services! Purchase email list from us and beat your competition &ndash; get
+                        of Affluence Business Inc! Purchase email list from us and beat your competition &ndash; get
                         better CTRs, high conversions, and eliminate cold call fears and low email bounce backs.</p>
                 </div>
                 <div class="col-lg-6 mb-4 wow fadeInRight">
@@ -494,7 +494,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
