--- a/templates/professional-lists/loan-officer-email-list.html
+++ b/templates/professional-lists/loan-officer-email-list.html
@@ -27,7 +27,7 @@
                         Business Heights</h2>
                     <p style="text-align:Justify;">The US loan and mortgage industry evolved at a face pace and is
                         continuing to grow quickly. Marketing teams must keep up with the growing industry to reach
-                        their intended audience - loan officers. If you’re sailing on the same boat, Span Global
+                        their intended audience - loan officers. If you’re sailing on the same boat, Affluence Business Inc
                         Services’ Loan Officer Email List will assist you in getting deep data insights for attracting
                         new business opportunities.</p>
                     <p style="text-align:Justify;">Our USA Loan Officer email database is available as location-based <a
@@ -47,7 +47,7 @@
                         information. </p>
                     <p style="text-align:Justify;">We have prudently crafted our <strong>USA Loan Officer
                             Databasees</strong> to keep you at the top of your marketing game. Our highly-researched
-                        database is professionally vetted and appended routinely. At Span Global Services, we ensure
+                        database is professionally vetted and appended routinely. At Affluence Business Inc, we ensure
                         compliance with the latest data privacy norms to deliver data only from the most credible
                         sources such as press releases and yellow pages.</p>
                     <p style="text-align:Justify;">Our goal is to present 100% genuine data with the latest information
@@ -126,7 +126,7 @@
                                     action=" " method="post"
                                     onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                         value=" "><input name="title"
-                                        type="hidden" value="Contact Request from Span Global Services">
+                                        type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname"
@@ -304,7 +304,7 @@
                 <div class="col-lg-6 geotargeted-list-sgs wow fadeInLeft"> </div>
                 <div class="col-lg-6 mb-4 wow fadeInRight">
                     <div class="pad-sec">
-                        <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Loan Officers Users
+                        <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Loan Officers Users
                             List</h2>
                         <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                 title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -367,7 +367,7 @@
                                 fresh information</li>
                         </ul>
                         <p style="text-align:Justify;"><a href=/
-                                titl="Span Global Services"><strong>Span Global Services</strong></a> is always pleased
+                                titl="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> is always pleased
                             to connect with new customers from different verticals and different industries. Contact us
                             to lay hold of a free email list sample. It will enable you to gauge the authenticity and
                             relevance of our email database. Without any delay, try out our FREE sample list!</p>
@@ -499,7 +499,7 @@
                                 onsubmit="return fnValidationContactside()"
                                 action=" "
                                 enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                    value="Contact Details from Span Global Services"> <input name="redirect_url"
+                                    value="Contact Details from Affluence Business Inc"> <input name="redirect_url"
                                     type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname"
