--- a/templates/technology-lists.html
+++ b/templates/technology-lists.html
@@ -30,7 +30,7 @@
                     with Technology Users Email List</h2>
                     <p style="text-align:Justify;">Want to buy Technology users email list for your data-driven
                         marketing initiatives? Opt-in for mailing list of companies that use technologies to manage
-                        their day to day workloads with Span Global Services for <a
+                        their day to day workloads with Affluence Business Inc for <a
                                 href="/b2b-email-list" title="B2B Sales Lead"><strong>B2B
                             Sales Leads</strong></a> data.</p>
                     <p style="text-align:Justify;">Technology is a series of inventions and their successful
@@ -48,7 +48,7 @@
                         ruling the roost by providing feature-rich applications for the smooth functioning of business
                         processes. A dedicated team of researchers at <a
                                 href="/email-lists"
-                                title="Span Global Services"><strong>Span Global Services</strong></a> provides a
+                                title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> provides a
                         comprehensive, well-researched and validated technology mailing list that covers the wide
                         spectrum of business technologies including MSQL, NetApp, WebEx, BigData, MS Azure and more.</p>
                     <p style="text-align:Justify;">Our <strong>Technology Users Lists</strong> have been compiled from
@@ -73,7 +73,7 @@
                                       action=" " method="post"
                                       onSubmit="return validationcon()"><input type="hidden" name="returnURL"
                                                                                value=" "><input
-                                        name="title" type="hidden" value="Contact Request from Span Global Services">
+                                        name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"><input type="text" name="fname"
@@ -177,7 +177,7 @@
                         <p style="text-align:Justify;">The technology sector is brimming with opportunities, more so,
                             with the changing trends in technology budgets. Businesses are making huge investments in
                             the technology sector. Reaching technology users with your services and offers is thus
-                            pertinent for business growth.<br>At Span Global Services we provide an accurate and
+                            pertinent for business growth.<br>At Affluence Business Inc we provide an accurate and
                             comprehensive <strong>Technology User Database</strong>, ideal for a highly demanding
                             business communication environment. Our responsive technology end-users contact database
                             help you stay ahead of the competition. Our wide catalog includes and is not limited to the
@@ -1213,7 +1213,7 @@
                                   onsubmit="return fnValidationContactside()"
                                   action=" "
                                   enctype="multipart/form-data"><input name="subject" type="hidden"
-                                                                       value="Contact Details from Span Global Services">
+                                                                       value="Contact Details from Affluence Business Inc">
                                 <input name="redirect_url" type="hidden"
                                        value=" ">
                                 <div class=" form-row">
