--- a/templates/technology-lists/amazon-web-services-users-list.html
+++ b/templates/technology-lists/amazon-web-services-users-list.html
@@ -27,7 +27,7 @@
                <h2 class="subhead-small-blk">Get Mailing List of Companies that Use Amazon Web Services</h2>
                <p><strong>Some of the Companies using AWS includes Apartment Therapy LLC, Bank of America, Cars LLC, CBS News, Dow Jones and many more.</strong></p>
                <p style="text-align:Justify;">We know that there is a tough competition in the world today among brands and services in the field of cloud solutions. You have to make place in the competitive market. Use our right <strong>AWS Customer List</strong> and data resources which help you surge ahead with the market expansion. We target to set your business as "Adept" by providing contact data at reasonable prices.</p>
-          <p style="text-align:Justify;">If you want to leverage one of the most influential AWS cusomters email list to take your business into next level. Span Global Services can be your partner in succeeding the vista capacity you target to attain. We help marketers for branding and promoting their product and services through our verified <strong>Amazon Web Services Users List</strong>.</p>
+          <p style="text-align:Justify;">If you want to leverage one of the most influential AWS cusomters email list to take your business into next level. Affluence Business Inc can be your partner in succeeding the vista capacity you target to attain. We help marketers for branding and promoting their product and services through our verified <strong>Amazon Web Services Users List</strong>.</p>
                
 			    <h2 class="subhead-small-blk">Customize your AWS Customer List by </h2>
 			   <style>
@@ -76,7 +76,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -524,7 +524,7 @@ var svgMapDataGPD = {
           <div class="col-lg-6 advantage-tech-list-bg wow fadeInRight"></div>
           <div class="col-lg-6 mb-4 wow fadeInLeft">
           	<div class="pad-sec">
-               <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Amazon Web Services Users List</h2> 
+               <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Amazon Web Services Users List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -550,9 +550,9 @@ var svgMapDataGPD = {
 		<div class="col-lg-6 mb-4 wow fadeInLeft">
 		
 			<h2 class="subhead-small-blk">Tap into the Potent Potential of AWS Leads List and Contact Datasets</h2>
-			 <p><a href=/ title="Span Global Services"><strong>Span Global Services</strong></a> enables companies in profiling those companies using Amazon web services. This entails different enterprises and professionals using Amazon web technology solutions. Our email appending services amplifies your efforts of addressing the right audiences at the right time.</p>
+			 <p><a href=/ title="Affluence Business Inc"><strong>Affluence Business Inc</strong></a> enables companies in profiling those companies using Amazon web services. This entails different enterprises and professionals using Amazon web technology solutions. Our email appending services amplifies your efforts of addressing the right audiences at the right time.</p>
                
-              <p style="text-align:Justify;">It will also help in designing marketing strategies to touch right market segment and increase higher sales revenue. Use our simple online application where you purchase, find and download your contact list. Design your advertising with a competitive edge by opting for Span Global Services greatly receptive <strong>AWS Users Mailing List</strong> and obtain qualified leads that convert.</p>
+              <p style="text-align:Justify;">It will also help in designing marketing strategies to touch right market segment and increase higher sales revenue. Use our simple online application where you purchase, find and download your contact list. Design your advertising with a competitive edge by opting for Affluence Business Inc greatly receptive <strong>AWS Users Mailing List</strong> and obtain qualified leads that convert.</p>
 		</div>
 		
 		
@@ -653,12 +653,12 @@ var svgMapDataGPD = {
                         <div class="card">
                             <div class="card-header" id="headingseven">
                                 <h2 class="mb-0">
-                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseseven"><i class="fa fa-plus"></i>How to Buy AWS Customers List from Span Global Services?</button>                     
+                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseseven"><i class="fa fa-plus"></i>How to Buy AWS Customers List from Affluence Business Inc?</button>
                                 </h2>
                             </div>
                             <div id="collapseseven" class="collapse" aria-labelledby="headingseven" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <p align="justify">The easiest way to purchase Amazon web services client lists is by clicking on the <strong>“<a href="/request-quote" title="Request A Sample Now">Request A Sample Now”</a></strong> option. For further details you may reach us on (877) 755-0023 or write in to us at <a href="mailto:info@affluencebusiness">info@affluencebusiness</a>.</p>
+                                    <p align="justify">The easiest way to purchase Amazon web services client lists is by clicking on the <strong>“<a href="/request-quote" title="Request A Sample Now">Request A Sample Now”</a></strong> option. For further details you may reach us on 307-213-7098 or write in to us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a>.</p>
                                 </div>
                             </div>
                         </div>
@@ -708,7 +708,7 @@ var svgMapDataGPD = {
             <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Our quest for the perfect database partner seemed never-ending until we came in contact with Span Global Services team. The aws users list they provided us, along with the necessary technology intelligence, enabled our sales and marketing teams to reach out to the markets with highest returns.<br><br> </p>
+  <p class="test-content">Our quest for the perfect database partner seemed never-ending until we came in contact with Affluence Business Inc team. The aws users list they provided us, along with the necessary technology intelligence, enabled our sales and marketing teams to reach out to the markets with highest returns.<br><br> </p>
   <p class="test-name"><strong>Robert Finegan</strong> </p>
   <p class="test-desg">VP Marketing</p>
                     </div>
@@ -716,7 +716,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">With more than 90% accuracy, the aws customers list from Span Global Services opened the gates of sales territories we’d been seeking. All we’d to do next was recognize and prioritize the accounts that were cash rich and promising, which our sales and marketing teams succeeded in doing.</p>
+  <p class="test-content">With more than 90% accuracy, the aws customers list from Affluence Business Inc opened the gates of sales territories we’d been seeking. All we’d to do next was recognize and prioritize the accounts that were cash rich and promising, which our sales and marketing teams succeeded in doing.</p>
   <p class="test-name"><strong>Andy Wright</strong> </p>
   <p class="test-desg">Director of Product</p>
                     </div>
@@ -724,7 +724,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                     <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">The aws clients list from Span Global Services allowed our sales and marketing teams to focus their time and effort on the right prospects based on technographics and firmographics with global outreach. We were thus empowered to crack deals from uncharted territories to make significant profits.<br><br> </p>
+  <p class="test-content">The aws clients list from Affluence Business Inc allowed our sales and marketing teams to focus their time and effort on the right prospects based on technographics and firmographics with global outreach. We were thus empowered to crack deals from uncharted territories to make significant profits.<br><br> </p>
   <p class="test-name"><strong>Josh Vess</strong></p>
   <p class="test-desg">CEO</p>
                     </div>
@@ -856,7 +856,7 @@ var svgMapDataGPD = {
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
