--- a/templates/technology-lists/crm-users-list.html
+++ b/templates/technology-lists/crm-users-list.html
@@ -33,9 +33,9 @@
 			   
 			  <h2 class="subhead-small-blk">Connect to your Niche Audience Worldwide with 100% Verified CRM Users Email List</h2>
 			   <p><strong>Some of the companies that use CRM software includes Activision, Ben & Jerry’s, Mayo Clinic, Progressive Insurance, Wells Fargo and many more.</strong></p>
-			   <p align="justify">Procure the CRM users email lists from <a href=/><strong>Span Global Services</strong></a> and get connected to your niche audience all across the globe. We offer accurate and dynamic data, collected from legitimate sources, that is verified by our expert data scientists.</p>
+			   <p align="justify">Procure the CRM users email lists from <a href=/><strong>Affluence Business Inc</strong></a> and get connected to your niche audience all across the globe. We offer accurate and dynamic data, collected from legitimate sources, that is verified by our expert data scientists.</p>
 			   <p align="justify">Businesses use Customer Relationship Management (CRM) Software to foster a personalized relationship with the customer. They map the customer journey and make an effort to understand customer preferences and pain points. Doing all of this manually, however, would be time-consuming and prone to human error. The best option, therefore, is to partner with a professional CRM users database solution provider.</p>
-			   <p align="justify">So, if you are a marketer looking to target CRM software users, allow the data experts of Span Global Services to help you achieve marketing success using our <strong>CRM Users Mailing List</strong>.</p>
+			   <p align="justify">So, if you are a marketer looking to target CRM software users, allow the data experts of Affluence Business Inc to help you achieve marketing success using our <strong>CRM Users Mailing List</strong>.</p>
 			   
 			   <h2 class="subhead-small-blk">Customize your CRM Customers List by </h2>
 			    <style>
@@ -86,7 +86,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -408,7 +408,7 @@
           <div class="col-lg-6 mb-4 wow fadeInLeft">
           	<div class="pad-sec">
 			
-			<h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ CRM Companies List</h2> 
+			<h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ CRM Companies List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -439,12 +439,12 @@
 		<div class="col-lg-6 mb-4 wow fadeInLeft">
 		
 			<h2 class="subhead-small-blk">Meet your Prospecting Objectives with Data-driven and Result-oriented Approach</h2>
-			 <p style="text-align:Justify;">Cookie-cutter approaches may work with cookies, but they never will when it comes to a premium <strong>CRM Users Email List</strong>. We at Span Global Services understand that your unique business needs data that is accurate and designed to meet its goals like a glove. We customize our CRM users datasets and also ensure that they are 100% accurate and 95% deliverable at the most competitive prices. </p>
+			 <p style="text-align:Justify;">Cookie-cutter approaches may work with cookies, but they never will when it comes to a premium <strong>CRM Users Email List</strong>. We at Affluence Business Inc understand that your unique business needs data that is accurate and designed to meet its goals like a glove. We customize our CRM users datasets and also ensure that they are 100% accurate and 95% deliverable at the most competitive prices. </p>
 			 <p style="text-align:Justify;">Moreover, we regularly update our <a href="/email-lists" title="Email Database"><strong>email database</strong></a> to remove obsolete, redundant, and inaccurate data. Thus, ensuring that the data you receive always stays relevant and current. Also, since your database will be permission-based, you need not fear the silent treatment from the other end! </p>
 			
 			
 			
-            <p style="text-align:Justify;">With email lists, <a href="/data-enrichment-services" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Span Global Services, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
+            <p style="text-align:Justify;">With email lists, <a href="/data-enrichment-services" title="Data Enrichment"><strong>data enrichment</strong></a>, and <a href="/email-appending" title="Email Append Services"><strong>email append services</strong></a> from Affluence Business Inc, you can increase the effectiveness of your marketing campaigns and watch your business soar to greater heights. Get in touch with us today!</p>
 		</div>
 		
 		
@@ -499,7 +499,7 @@
             <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">The crm users list from Span Global Services opened the doors to sales areas we'd been looking for. With the data having more than 90% accuracy, all that was left for our sales and marketing teams was to identify and prioritize the accounts that would bring in fulfilling revenues. And that’s exactly what we achieved in flying colors.<br><br> </p>
+  <p class="test-content">The crm users list from Affluence Business Inc opened the doors to sales areas we'd been looking for. With the data having more than 90% accuracy, all that was left for our sales and marketing teams was to identify and prioritize the accounts that would bring in fulfilling revenues. And that’s exactly what we achieved in flying colors.<br><br> </p>
   <p class="test-name"><strong>Ryan Agnew</strong> </p>
   <p class="test-desg">Associate VP Marketing</p>
                     </div>
@@ -507,7 +507,7 @@
                 <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Our search for the ideal database partner appeared to go on forever until we met Span Global Service team. With their support, our sales and marketing teams were able to reach out to the markets with the highest returns, thanks to the crm customers list Span Global provided, along with the essential CRM technology intelligence.</p>
+  <p class="test-content">Our search for the ideal database partner appeared to go on forever until we met Affluence Business Inc team. With their support, our sales and marketing teams were able to reach out to the markets with the highest returns, thanks to the crm customers list Affluence Business Inc provided, along with the essential CRM technology intelligence.</p>
   <p class="test-name"><strong>Tom Farley</strong> </p>
   <p class="test-desg">AVP, Sales Operations</p>
                     </div>
@@ -515,7 +515,7 @@
                 <div class="col-lg-4 wow fadeInLeft text-center">
                     <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Partnering with Span Global Services, we were able to obtain real-time data on firmographics, technology usage, buying intent signals, and hundreds of other account attributes with the help of their crm users mailing list. It allowed our sales and marketing teams to devise customized campaigns and follow-ups resulting in successful campaigns in numbers and capital.<br><br> </p>
+  <p class="test-content">Partnering with Affluence Business Inc, we were able to obtain real-time data on firmographics, technology usage, buying intent signals, and hundreds of other account attributes with the help of their crm users mailing list. It allowed our sales and marketing teams to devise customized campaigns and follow-ups resulting in successful campaigns in numbers and capital.<br><br> </p>
   <p class="test-name"><strong>Jeff Randel</strong></p>
   <p class="test-desg">VP Sales</p>
                     </div>
@@ -542,7 +542,7 @@
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
