--- a/templates/technology-lists/erp-users-list.html
+++ b/templates/technology-lists/erp-users-list.html
@@ -32,7 +32,7 @@
                         <p style="text-align:Justify;">ERP Software or Enterprise Resource Planning software makes the
                             management of day-to-day business activities easier, giving managers more time to focus on
                             long-term goals and core competencies. That is why businesses across all industries employ
-                            ERP Software. The <strong>ERP users email list</strong> from Span Global Services can help
+                            ERP Software. The <strong>ERP users email list</strong> from Affluence Business Inc can help
                             you target top users of ERP across geographies and industries. </p>
 
                         <p style="text-align:Justify;">With detailed data about ERP prospects that is collected from
@@ -107,7 +107,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -298,7 +298,7 @@
                     <div class="col-lg-6 advantage-tech-list-bg wow fadeInRight"></div>
                     <div class="col-lg-6 mb-4 wow fadeInLeft">
                         <div class="pad-sec">
-                            <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ ERP Customers List
+                            <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ ERP Customers List
                             </h2>
                             <p><img src="/static/assets/img/green-right.png" alt="" title=""
                                     class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data
@@ -347,7 +347,7 @@
                         </p>
                         <p style="text-align:Justify;">The market is rife with opportunities to market to the most
                             qualified <a href="/email-lists" title="Sales leads">sales
-                                leads</a>. However, the early bird catches the worm, right? Span Global Services will
+                                leads</a>. However, the early bird catches the worm, right? Affluence Business Inc will
                             help you stay ahead of your competitors at every turn!</p>
                     </div>
 
@@ -382,7 +382,7 @@
                         </p>
 
                     </div>
-                    <h2 class="subhead-small-blk">Span Global Services Will Bring Home High-Profile ERP Users Interested
+                    <h2 class="subhead-small-blk">Affluence Business Inc Will Bring Home High-Profile ERP Users Interested
                         in Doing Business with You</h2>
                     <p style="text-align:Justify;">With our <strong>ERP Users List</strong>, you can get extensive
                         information about managers, executives, professionals, and top decision-makers who use ERP
@@ -402,7 +402,7 @@
                         investment. And what’s more is that all this can be yours at extremely affordable costs!</p>
 
                     <p style="text-align:Justify;">Start climbing the ladder of campaign success with <a
-                            href=/ title="Span Global Services"><strong>Span Global
+                            href=/ title="Affluence Business Inc"><strong>Affluence Business Inc
                                 Services</strong></a>. Get in touch and get started today! </p>
 
 
@@ -536,7 +536,7 @@
                         <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
