--- a/templates/technology-lists/quickbooks-users-list.html
+++ b/templates/technology-lists/quickbooks-users-list.html
@@ -25,7 +25,7 @@
         <div class="row">
           <div class="col-lg-7 section-fpad wow fadeInLeft">
                <h2 class="subhead-small-blk">Expand Customer Base with Tele-verified QuickBooks Users Email List and Leads Data</h2>
-			   <p align="justify">Generate significant revenue with verified and accurate <strong>QuickBooks Users Email List</strong> delivered by <a href="/"><strong>Span Global Services</strong></a>. Since, effective communication is the cornerstone for successful campaigns, for assured campaign success, it is important to invest in a highly accurate <strong>Mailing List of QuickBooks Users</strong>. It will help marketers reach QuickBooks users across SMB and larger enterprises for assured deliverables. At Span Global Services, we ensure that marketers get an edge over their competitors when they send B2B campaigns to a niche audience base.</p>
+			   <p align="justify">Generate significant revenue with verified and accurate <strong>QuickBooks Users Email List</strong> delivered by <a href="/"><strong>Affluence Business Inc</strong></a>. Since, effective communication is the cornerstone for successful campaigns, for assured campaign success, it is important to invest in a highly accurate <strong>Mailing List of QuickBooks Users</strong>. It will help marketers reach QuickBooks users across SMB and larger enterprises for assured deliverables. At Affluence Business Inc, we ensure that marketers get an edge over their competitors when they send B2B campaigns to a niche audience base.</p>
 			  <p align="justify">QuickBooks is lot more than just an accounting software. Since it is built on the cloud platform it allows users to work from anywhere across multiple devices. It provides instant access to customers, vendors and employees with regularly upgraded online versions. The <strong>QuickBooks Users Email Database</strong> helps marketers to send business campaigns directly to the intended addresses or the inboxes depending on the type of campaign. Most importantly, the versatile and tele-verified <strong>QuickBooks Users Database</strong> is apt for direct, online and telemarketing campaigns thereby reducing overall campaign costs and maximizing the returns.</p>
 			    <h2 class="subhead-small-blk">Customize your Quickbooks Customers List by </h2>
 			    <style>
@@ -74,7 +74,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -522,7 +522,7 @@ var svgMapDataGPD = {
           <div class="col-lg-6 mb-4 wow fadeInLeft">
           	<div class="pad-sec">
 			
-			<h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Quickbooks Users List</h2> 
+			<h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Quickbooks Users List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -550,7 +550,7 @@ var svgMapDataGPD = {
 		<div class="col-lg-6 mb-4 wow fadeInLeft">
 		
 			<h2 class="subhead-small-blk">Roll Out Successful Campaigns with our QuickBooks Customer List</h2>
-			<p style="text-align:Justify;">At Span Global Services we ascertain that your campaigns reach a global audience base for the desired business revenue. A dedicated team of experts compile the data by scanning markets with huge potential across USA, UK, Australia and other countries worldwide. They source data from reliable sources that include trade shows, business directories and more to ensure that your global campaigns get an edge. The <strong>QuickBooks Customers List</strong> is therefore an exhaustive one making business communication successful.</p>
+			<p style="text-align:Justify;">At Affluence Business Inc we ascertain that your campaigns reach a global audience base for the desired business revenue. A dedicated team of experts compile the data by scanning markets with huge potential across USA, UK, Australia and other countries worldwide. They source data from reliable sources that include trade shows, business directories and more to ensure that your global campaigns get an edge. The <strong>QuickBooks Customers List</strong> is therefore an exhaustive one making business communication successful.</p>
 			<p style="text-align:Justify;"> The added flexibility to opt from customized or pre-built solutions ensures that your potential audience base is tapped and you reach genuinely interested audience base with your services and offers. Our QuickBooks Users Email Database is apt for direct mail, email and telemarketing campaigns for assured returns and higher ROI. To get assured results, be prudent and buy segmented QuickBooks users email Lists. Run planned and methodical marketing communications and carve a niche amidst thick competition. Be a dominant global player and amplify campaign returns.</p>
 		</div>
 		
@@ -571,9 +571,9 @@ var svgMapDataGPD = {
           <div class="col-lg-12 wow fadeInLeft">
           	
 			<h2 class="subhead-small-blk text-center">Achieve your High Business Goals with Customized and Segmented QuickBooks Users List</h2>
-			<p align="justify">Span Global Services is a pioneer in providing verified <a href="/"><strong>technology mailing lists </strong></a>across multiple channels. It is the global powerhouse of business data across different verticals. Our QuickBooks Users Mailing List may be procured in the pre-built format or may be custom built to suit different business criteria. Our lists facilitate targeted marketing in the most effortless manner ensuring that your campaigns get the global campaign edge.</p>
+			<p align="justify">Affluence Business Inc is a pioneer in providing verified <a href="/"><strong>technology mailing lists </strong></a>across multiple channels. It is the global powerhouse of business data across different verticals. Our QuickBooks Users Mailing List may be procured in the pre-built format or may be custom built to suit different business criteria. Our lists facilitate targeted marketing in the most effortless manner ensuring that your campaigns get the global campaign edge.</p>
 			<p align="justify">Single channel communication may have been successful in the past but may not suffice in the world of global business communication. There are more challenges to meet, hurdles to cross and clients to meet. Therefore, the need of the hour is to invest in databases that can minimize sales cycle time and amplify returns. As a prudent marketer if you wish to overcome these obstacles in communication why not invest in the tele-verified email list of companies that use QuickBooks?</p>
-			<p align="justify">This is where Span Global Services comes at its best by providing the most accurate <strong>QuickBooks Users Email List</strong> for effective multichannel communication and brand building. The exhaustive QuickBooks Users Mailing List Database has been compiled based on the global campaign needs that keep changing with time. Our email Lists are accurate, responsive and delivery-driven to ensure that your campaigns gain momentum.</p>
+			<p align="justify">This is where Affluence Business Inc comes at its best by providing the most accurate <strong>QuickBooks Users Email List</strong> for effective multichannel communication and brand building. The exhaustive QuickBooks Users Mailing List Database has been compiled based on the global campaign needs that keep changing with time. Our email Lists are accurate, responsive and delivery-driven to ensure that your campaigns gain momentum.</p>
 			<p align="justify">Our list of companies that use QuickBooks are verified via manual and automated processes. Not only do we help you address niche audience bases but also nurture your existing business database through our impeccable and cost effective <a href="/email-appending"><strong>email append services</strong></a>. Get access to authentic business data and maximize returns with the revenue-driven business mailing lists and get assured returns. The QuickBooks Users Email Database is the perfect solution for unmatched campaign success and brand building initiatives. Take your campaigns to the next level and give your global campaigns an edge.</p>
 			
 			<div class="mb-4 mt-4 text-center">
@@ -622,7 +622,7 @@ var svgMapDataGPD = {
                     </div>
                     <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                         <div class="card-body">
-                            <p align="justify">There are many providers of <strong>QuickBooks Users Lists</strong>. Span Global Services is by far the most ideal choice. A dedicated team of researchers compile the data and verify and validate them to ensure higher deliverables and campaign success.</p>
+                            <p align="justify">There are many providers of <strong>QuickBooks Users Lists</strong>. Affluence Business Inc is by far the most ideal choice. A dedicated team of researchers compile the data and verify and validate them to ensure higher deliverables and campaign success.</p>
                         </div>
                     </div>
                 </div>
@@ -653,7 +653,7 @@ var svgMapDataGPD = {
                             </div>
                             <div id="collapseeight" class="collapse" aria-labelledby="headingeight" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <p align="justify">Astute marketers looking at maximizing campaign success will find the tele-verified database useful for brand building initiatives. The email list of QuickBooks Users is certain to maximize campaign returns and reduce overall campaign costs. So, yes, it is wort investing in the <strong>QuickBook Users Database</strong> from Span Global Services.</p>
+                                    <p align="justify">Astute marketers looking at maximizing campaign success will find the tele-verified database useful for brand building initiatives. The email list of QuickBooks Users is certain to maximize campaign returns and reduce overall campaign costs. So, yes, it is wort investing in the <strong>QuickBook Users Database</strong> from Affluence Business Inc.</p>
                                 </div>
                             </div>
                         </div>
@@ -690,7 +690,7 @@ var svgMapDataGPD = {
             <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Our sales and marketing teams were able to focus their time and effort on the correct prospects using the quickbooks users list from Span Global Services, which was based on technographics and firmographics and had a global reach. As a result, we were able to make considerable gains by making significant deals in prized sales territories.<br><br> </p>
+  <p class="test-content">Our sales and marketing teams were able to focus their time and effort on the correct prospects using the quickbooks users list from Affluence Business Inc, which was based on technographics and firmographics and had a global reach. As a result, we were able to make considerable gains by making significant deals in prized sales territories.<br><br> </p>
   <p class="test-name"><strong>Drew Lague</strong> </p>
   <p class="test-desg">Digital Marketing Manager</p>
                     </div>
@@ -698,7 +698,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">The Span Global Services quickbooks customer database allowed us to reach out to our most profitable sales segments. It resulted in significant revenues for us with our marketing and sales teams successfully figuring out the most profitable customers quite effectively.</p>
+  <p class="test-content">The Affluence Business Inc quickbooks customer database allowed us to reach out to our most profitable sales segments. It resulted in significant revenues for us with our marketing and sales teams successfully figuring out the most profitable customers quite effectively.</p>
   <p class="test-name"><strong>Amy Doyle</strong> </p>
   <p class="test-desg">CMO</p>
                     </div>
@@ -706,7 +706,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                     <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Our B2B sales and marketing teams were able to find more and better prospects, prioritize outreach, and close agreements faster using the quickbook users email list from Span Global Services. It aided us in developing personalized marketing that yielded better results.<br><br> </p>
+  <p class="test-content">Our B2B sales and marketing teams were able to find more and better prospects, prioritize outreach, and close agreements faster using the quickbook users email list from Affluence Business Inc. It aided us in developing personalized marketing that yielded better results.<br><br> </p>
   <p class="test-name"><strong>Stuart Miller</strong></p>
   <p class="test-desg">Head of Marketing</p>
                     </div>
@@ -839,7 +839,7 @@ var svgMapDataGPD = {
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
