--- a/templates/technology-lists/sap-users-list.html
+++ b/templates/technology-lists/sap-users-list.html
@@ -30,7 +30,7 @@
 			
                <h2 class="subhead-small-blk">Avail Verified and Precise SAP Customers List</h2>
 			   <p><strong>Some of the companies that use SAP includes 3M, 7-Eleven Inc, Bobst, DuPont, Johnson & Johnson and many more.</strong></p>
-			   <p align="justify">Promote your products and services with the authentic <strong>SAP Clients List</strong> provided by <a href=/><strong>Span Global Services</strong></a> and stand out from the crowd. We offer highly-responsive <strong>SAP Customer List</strong> to enhance your marketing efforts so that you can roll out engaging campaigns. Our email list of SAP users comes with the guarantee of 95% deliverability through multi-channel marketing and gives maximum return on campaign investment. Therefore, do not get laid back and procure the right services. Increase of your sales will be guaranteed if you take your campaign efforts to the right direction.</p>
+			   <p align="justify">Promote your products and services with the authentic <strong>SAP Clients List</strong> provided by <a href=/><strong>Affluence Business Inc</strong></a> and stand out from the crowd. We offer highly-responsive <strong>SAP Customer List</strong> to enhance your marketing efforts so that you can roll out engaging campaigns. Our email list of SAP users comes with the guarantee of 95% deliverability through multi-channel marketing and gives maximum return on campaign investment. Therefore, do not get laid back and procure the right services. Increase of your sales will be guaranteed if you take your campaign efforts to the right direction.</p>
 			   <p align="justify">SAP is by far one of the most in-demand enterprise software solution providers across the world. As a result of their worldwide brand reputation and vast client base, many marketers want to expand their market by targeting their client base. So your targeted decision makers in <strong>Companies that use SAP Technologies</strong> are prime targets for many other marketers from different geographies. You really need to be smart with your action plans if you want to stand out from your competitors.</p>
 			   
 			   <h2 class="subhead-small-blk">Customize your SAP Users Email List by</h2>
@@ -80,7 +80,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -538,7 +538,7 @@ var svgMapDataGPD = {
           <div class="col-lg-6 advantage-tech-list-bg wow fadeInRight"></div>
           <div class="col-lg-6 mb-4 wow fadeInLeft">
           	<div class="pad-sec">
-			  <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ SAP Users List</h2> 
+			  <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ SAP Users List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -565,8 +565,8 @@ var svgMapDataGPD = {
 		<div class="col-lg-6 mb-4 wow fadeInLeft">
 		
 			<h2 class="subhead-small-blk">Take your Business Levels Higher with Valuable Data Insights and Intelligence</h2>
-			<p style="text-align:Justify;">Span Global Services’ actionable <strong>SAP Clients List</strong> does more than just offering data. We add intelligence to your campaign that results in the increase of sales like never before. With us, you will be able to pinpoint the right prospects for your campaign messages. </p>
-			<p style="text-align:Justify;"> Enabled with our data and intelligence, you will be able to target top-notch decision makers and experienced IT professionals with multi-channel marketing. Span Global Services will give you the right support with a powerful <strong>List of SAP Users</strong> relevant for all direct mail, telemarketing, email marketing, and social media marketing campaigns.</p>
+			<p style="text-align:Justify;">Affluence Business Inc’ actionable <strong>SAP Clients List</strong> does more than just offering data. We add intelligence to your campaign that results in the increase of sales like never before. With us, you will be able to pinpoint the right prospects for your campaign messages. </p>
+			<p style="text-align:Justify;"> Enabled with our data and intelligence, you will be able to target top-notch decision makers and experienced IT professionals with multi-channel marketing. Affluence Business Inc will give you the right support with a powerful <strong>List of SAP Users</strong> relevant for all direct mail, telemarketing, email marketing, and social media marketing campaigns.</p>
 		</div>
 		
 		
@@ -588,15 +588,15 @@ var svgMapDataGPD = {
 		   
           	<h2 class="subhead-small-blk text-center">Connect with the Right Decision-makers to Achieve your Business Goals Efficiently </h2>
 			
-			<p style="text-align:Justify;">Targeting SAP Users across the world in a competitive business world will be difficult without using the right data. Keep your brand on the top of your prospects mind by delivering personalized content to the right accounts at the right time. Business professionals and decision makers eventually move, retire, pass away or make professional changes each year. The need to clean and verify data sets is, therefore, critical to ensure sales and marketing success. At Span Global Services, we deliver highly-targeted and tele-verified SAP users email list database to help you to connect with the decision makers who are highly probable to procure products and services from you.</p>
+			<p style="text-align:Justify;">Targeting SAP Users across the world in a competitive business world will be difficult without using the right data. Keep your brand on the top of your prospects mind by delivering personalized content to the right accounts at the right time. Business professionals and decision makers eventually move, retire, pass away or make professional changes each year. The need to clean and verify data sets is, therefore, critical to ensure sales and marketing success. At Affluence Business Inc, we deliver highly-targeted and tele-verified SAP users email list database to help you to connect with the decision makers who are highly probable to procure products and services from you.</p>
 			
 			<p style="text-align:Justify;">We gather information from the most reputable sources while compiling <a href="/b2b-email-list"><strong>business databases</strong></a>. As a marketer, if you think of manually developing <strong>SAP Users Mailing Lists</strong> then not only you will be compromising on time and resources, but might even be losing on opportunities. Therefore, let us be of your assistance and deliver you the <strong>List of Companies using SAP</strong> to power your campaigns.</p>
-			<p style="text-align:Justify;">Most vendors in the market are not capable of providing authentic data. Whereas we at Span Global Services offer the most accurate <strong>SAP Users Email List</strong> that keeps campaigns niche-based and help marketers get maximum response from market. We develop the most accurate data lists by referring globally legitimate sources like: Business Directories, Government Lists, Trade Fairs, Yellow Pages, Seminars and Conferences, Online Subscriptions etc.</p>
+			<p style="text-align:Justify;">Most vendors in the market are not capable of providing authentic data. Whereas we at Affluence Business Inc offer the most accurate <strong>SAP Users Email List</strong> that keeps campaigns niche-based and help marketers get maximum response from market. We develop the most accurate data lists by referring globally legitimate sources like: Business Directories, Government Lists, Trade Fairs, Yellow Pages, Seminars and Conferences, Online Subscriptions etc.</p>
 			
 			
 
 
-<p style="text-align:Justify;">When targeting SAP clients from different geographies, limiting your campaigns within a single channel will be wrong. At Span Global Services, we offer delivery-driven verified SAP users email list where a single list can be effectively used as marketing tool for all your marketing endeavors. So, do not waste time brooding over unassertive marketing efforts. Get in touch with us, procure our database services and solutions, and make your sales and marketing more assertive.</p>
+<p style="text-align:Justify;">When targeting SAP clients from different geographies, limiting your campaigns within a single channel will be wrong. At Affluence Business Inc, we offer delivery-driven verified SAP users email list where a single list can be effectively used as marketing tool for all your marketing endeavors. So, do not waste time brooding over unassertive marketing efforts. Get in touch with us, procure our database services and solutions, and make your sales and marketing more assertive.</p>
 			<div class="mb-4 mt-4 text-center">
 				<a href="#" data-toggle="modal" data-target="#send-message" class="green-btn circle-fa">Get Your FREE Sample Today!&nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
 			</div>
@@ -694,12 +694,12 @@ var svgMapDataGPD = {
                         <div class="card">
                             <div class="card-header" id="headingeight">
                                 <h2 class="mb-0">
-                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseeight"><i class="fa fa-plus"></i>What Can You Expect From the SAP Companies List of Span Global Services?</button>                     
+                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseeight"><i class="fa fa-plus"></i>What Can You Expect From the SAP Companies List of Affluence Business Inc?</button>
                                 </h2>
                             </div>
                             <div id="collapseeight" class="collapse" aria-labelledby="headingeight" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <p>Span Global Services guarantees a comprehensive, accurate, and updated list of SAP customers. Currently, we have the data of <strong>118,784</strong> companies that use SAP segregated country-wise and industry-wise. With our list, you can contact directors, managers, C-level executives, business analysts, and consultants.</p>
+                                    <p>Affluence Business Inc guarantees a comprehensive, accurate, and updated list of SAP customers. Currently, we have the data of <strong>118,784</strong> companies that use SAP segregated country-wise and industry-wise. With our list, you can contact directors, managers, C-level executives, business analysts, and consultants.</p>
                                 </div>
                             </div>
                         </div>
@@ -737,7 +737,7 @@ var svgMapDataGPD = {
             <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">The SAP users list, in combination with additional technology insight, from Span Global Services, aided us in making real-time decisions, ensuring that sales performance remained on track and in line with business goals.<br><br> </p>
+  <p class="test-content">The SAP users list, in combination with additional technology insight, from Affluence Business Inc, aided us in making real-time decisions, ensuring that sales performance remained on track and in line with business goals.<br><br> </p>
   <p class="test-name"><strong>Thomas Shultz</strong> </p>
   <p class="test-desg">CMO</p>
                     </div>
@@ -745,7 +745,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">With the help of the robust and accurate SAP customers list procured from Span Global Services, our B2B sales and marketing teams were able to find more and better customers, enhance outreach, and close deals faster.</p>
+  <p class="test-content">With the help of the robust and accurate SAP customers list procured from Affluence Business Inc, our B2B sales and marketing teams were able to find more and better customers, enhance outreach, and close deals faster.</p>
   <p class="test-name"><strong>Katharina Kochova</strong> </p>
   <p class="test-desg">Global PR Director</p>
                     </div>
@@ -753,7 +753,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                     <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Span Global Services' SAP clients list provided us with a unique perspective on global sectors, markets, and organizations. This allowed our sales, marketing, and strategy teams to identify the most valuable possibilities, thus enabling them to design revenue-optimization and growth-accelerating plans.<br><br> </p>
+  <p class="test-content">Affluence Business Inc' SAP clients list provided us with a unique perspective on global sectors, markets, and organizations. This allowed our sales, marketing, and strategy teams to identify the most valuable possibilities, thus enabling them to design revenue-optimization and growth-accelerating plans.<br><br> </p>
   <p class="test-name"><strong>Martin Kostur</strong></p>
   <p class="test-desg">Marketing Director</p>
                     </div>
@@ -885,7 +885,7 @@ var svgMapDataGPD = {
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
