--- a/templates/total-addressable-market.html
+++ b/templates/total-addressable-market.html
@@ -180,7 +180,7 @@
           <div class="mx-800">
             <h2 class="lgreen-head br-white-bottom mb-5 pb-5">Identify Your Target Market To Maximize Revenues</h2>
             <h4 class="normal-hblk text-white">Identify how many target customers exist in the market.</h4>
-            <h4 class="normal-hblk text-white">Calculate the total market size of your prospects with Span Global
+            <h4 class="normal-hblk text-white">Calculate the total market size of your prospects with Affluence Business Inc
               Services data experts.</h4>
           </div>
         </div>
