--- a/templates/data-appending.html
+++ b/templates/data-appending.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <p style="text-align:Justify;">Whatever your customer intelligence challenges, consider them solved! Experience the best customer intelligence on-demand with our superior data mining capabilities.</p>
-                    <p style="text-align:Justify;">The industry average to match and refresh the database stands at an average of 90 days. At Span Global services, we undertake data refresh at regular intervals of every 45 days.</p>
+                    <p style="text-align:Justify;">The industry average to match and refresh the database stands at an average of 90 days. At Affluence Business Inc, we undertake data refresh at regular intervals of every 45 days.</p>
                 </div>
                 <div class="col-lg-5 mb-4 wow fadeInRight">
                     <div class="mx-800">
@@ -50,7 +50,7 @@
                             <h4>Free Append Test</h4>
                             </br>
                             <div class="form">
-                                <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f20" id="contact-form" action=" " method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -144,7 +144,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
