--- a/templates/data-cleansing.html
+++ b/templates/data-cleansing.html
@@ -131,7 +131,7 @@
                         as accurate data automatically translates to better-yielding ROIs.</p>
                     <p style="text-align:Justify;"><strong>Data clensing</strong> plays a critical role in building a machine learning model, which ultimately provides insights for any campaign. However, it hardly gets any praise and is not often discussed, despite it being one of
                         the most essential jobs for data scientists who spend immense effort on it.</p>
-                    <p style="text-align:Justify;"> At Span Global Services, we believe that data should be clean, green, and lean. To that aid, we provide you data that is free of errors as in clean, fresh, which means it’s green, and relevant to your business requirements, as in lean.
+                    <p style="text-align:Justify;"> At Affluence Business Inc, we believe that data should be clean, green, and lean. To that aid, we provide you data that is free of errors as in clean, fresh, which means it’s green, and relevant to your business requirements, as in lean.
                         A total win-win-win!</p>
                     <p style="text-align:Justify;">Is your business in need of <strong>data scrubbing services</strong>? If so, then we provide the best ones, helping you acquire verified data that is easier to use and store effectively. As such, your job becomes more convenient since
                         you can use such credible statistics to make the most informed business decisions.</p>
@@ -189,7 +189,7 @@
                 <div class="row">
                     <div class="col-lg-12 wow fadeInRight">
                         <h2 class="subhead-small-blk">Give Your Marketing Campaigns a Clear Direction with Our CRM Data Cleansing Solutions</h2>
-                        <p style="text-align:Justify;">Marketers often chase clean data as they can be a powerhouse for any marketing campaign. While that can be tedious, you can expedite the process by simply partnering with Span Global Services. Our data cleaning and data scrubbing
+                        <p style="text-align:Justify;">Marketers often chase clean data as they can be a powerhouse for any marketing campaign. While that can be tedious, you can expedite the process by simply partnering with Affluence Business Inc. Our data cleaning and data scrubbing
                             will furnish you with the industry-best solutions, reviving your database and increasing its relevancy tenfold.</p>
                         <p style="text-align:Justify;">As a leading data provider, we have made a name in the industry by proving lucrative and quality data. Thus, we pride ourselves on providing <strong>CRM data cleansing solutions</strong> that help our clients reap maximum rewards
                             from their campaigns, using cleansed insights to conduct no-nonsense email marketing.</p>
@@ -355,7 +355,7 @@
                     }
                 </style>
                 <div class="col-lg-12 benifit-dc mb-4 wow fadeInRight ">
-                    <h2 class="subhead-small-blk">Benefits of Availing Data Hygiene Services from Span Global Services</h2>
+                    <h2 class="subhead-small-blk">Benefits of Availing Data Hygiene Services from Affluence Business Inc</h2>
                     <div class="row mb-2">
                         <div class="col-sm-4">
                             <div class="new-business-card"> <img src="/static/assets/img/Free-Trial.png" alt="Free Trial" class="respo-img " />
@@ -423,11 +423,11 @@
             <div class="row">
                 <div class="col-sm-12 wow fadeInLeft">
                     <h2 class="subhead-small-blk">We Can Help You Care for Your Most Valuable Business Asset</h2>
-                    <p style="text-align:Justify;">Data quality determines how effective your decision-making can be. Thus, data is the most valuable business asset that requires your utmost attention. At Span Global Services, we help you manage, correct, delete, validate, modify,
+                    <p style="text-align:Justify;">Data quality determines how effective your decision-making can be. Thus, data is the most valuable business asset that requires your utmost attention. At Affluence Business Inc, we help you manage, correct, delete, validate, modify,
                         organize and format data from various fields and across different databases.</p>
                     <p style="text-align:Justify;">Our <strong>data cleaning services</strong> guarantee high operational efficiency and reduce costs spent correcting bad data. Furthermore, we utilize them to deliver top-quality data solutions. During our vigorous data cleaning and
                         data scrubbing services, we highlight vital information for our clients’ convenience.</p>
-                    <p style="text-align:Justify;">What does all this accrue to you? Well, you invest in a competitive edge to overtake your competitors and rise above. Therefore, if you want your business to flourish, invest in Span Global Services’ <strong>data hygiene services</strong>                        and witness the power of clean insights.</p>
+                    <p style="text-align:Justify;">What does all this accrue to you? Well, you invest in a competitive edge to overtake your competitors and rise above. Therefore, if you want your business to flourish, invest in Affluence Business Inc’ <strong>data hygiene services</strong>                        and witness the power of clean insights.</p>
                     <p style="text-align:Justify;">Get in touch with our data experts by emailing us at <a href="mailto:steve@affluencebizdata.com"><strong>steve@affluencebizdata.com</strong></a> or call us on <a href="tel:307-213-7098"><strong>307-213-7098</strong></a> to get
                         a free consultation today! </p>
                 </div>
@@ -493,7 +493,7 @@
                                     </div>
                                     <div class="card">
                                         <div class="card-header" id="headingfive">
-                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefive"><i class="fa fa-plus"></i>Why Choose Span Global Services for Data Cleansing Solutions?</button> </h2>
+                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefive"><i class="fa fa-plus"></i>Why Choose Affluence Business Inc for Data Cleansing Solutions?</button> </h2>
                                         </div>
                                         <div id="collapsefive" class="collapse " aria-labelledby="headingfive" data-parent="#accordionExample">
                                             <div class="card-body">
