--- a/templates/data-profiling.html
+++ b/templates/data-profiling.html
@@ -62,7 +62,7 @@
                     <h2 class="subhead-small-blk">Data Profiling Services</h2>
                     <p><strong>Is your database structured to single out data sets?</strong></p>
                     <p style="text-align:Justify;">Data profiling is one of the best ways to eliminate anomalies in your database. It takes care of the structure and quality of your database. You can identify distinguishable data sets for accurate campaigning through our data profiling
-                        services. Span Global Services uses a comprehensive validation and profiling process to make your database relevant and 0f-improved quality. The process also includes:</p>
+                        services. Affluence Business Inc uses a comprehensive validation and profiling process to make your database relevant and 0f-improved quality. The process also includes:</p>
                     <ul class="space-list">
                         <li>Removal of duplicate records</li>
                         <li>Automatic and manual verification and validation</li>
@@ -73,7 +73,7 @@
                         are adopted by us to eliminate them. Validation and verification of your database ensure you have the right contact at all times, or else it is a waste of your time and resources. Data formats come in various ways, and it takes
                         a certain amount of skill and expertise to ensure that it is understood and only then will the other allied processes work well. Our data specialists know the in and out of such formats to work with them more efficiently.</p>
                     <p
-                        style="text-align:Justify;">The database is normalized to arrange records into one implement-targeted campaign to improve ROI. Find out how Span Global Services can help in profiling your database, connect with our experts at <strong>307-213-7098</strong> for
+                        style="text-align:Justify;">The database is normalized to arrange records into one implement-targeted campaign to improve ROI. Find out how Affluence Business Inc can help in profiling your database, connect with our experts at <strong>307-213-7098</strong> for
                         a free one-on-one consultation, or email us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a></p>
                 </div>
                 <div class="col-lg-5 mb-4 wow fadeInRight">
@@ -82,7 +82,7 @@
                             <h4>REQUEST<br/> A CALL BACK NOW</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -166,11 +166,11 @@
                                 <div class="col-lg-6 mb-4 wow fadeInRight">
                                     <div class="card">
                                         <div class="card-header" id="headingfour">
-                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i>Why should I avail Data Profiling Services from Span Global Services?</button>                                                </h2>
+                                            <h2 class="mb-0"> <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsefour"><i class="fa fa-plus"></i>Why should I avail Data Profiling Services from Affluence Business Inc?</button>                                                </h2>
                                         </div>
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services is a pioneer in providing unmatched quality <strong>Data Profiling Services</strong>. It is not only cost-effective but offers top-notch services ensuring that multichannel campaigns
+                                                <p>Affluence Business Inc is a pioneer in providing unmatched quality <strong>Data Profiling Services</strong>. It is not only cost-effective but offers top-notch services ensuring that multichannel campaigns
                                                     gain momentum. You may get the <strong>best Data Profiling Service</strong> at unmatched prices by writing in to us at: steve@affluencebizdata.com or you may call us on 307-213-7098..</p>
                                             </div>
                                         </div>
@@ -222,7 +222,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
