--- a/templates/data-verification.html
+++ b/templates/data-verification.html
@@ -63,7 +63,7 @@
                         <strong>How we ensure accuracy in our database and data services</strong>
                     </p>
                     <p>Data that is procured externally should be verified, before integrating it with the master database. To maintain the quality of your database a robust data verification process should be in place.</p>
-                    <p>Span Global Services has a data verification process in place, which can ensure high data quality, accuracy and adherence to authentic prospects. The two methods of data verification we follow include automatic data verification and
+                    <p>Affluence Business Inc has a data verification process in place, which can ensure high data quality, accuracy and adherence to authentic prospects. The two methods of data verification we follow include automatic data verification and
                         manual data verification.</p>
                     <div id="data-verify-tab">
                         <ul class="nav nav-tabs" role="tablist">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>Keep your database fresh and make it a revenue generator. Find out how <strong>Span Global Services</strong> can help in ensuring the accuracy of your database, connect with our experts at <strong>307-213-7098</strong> for a free
+                    <p>Keep your database fresh and make it a revenue generator. Find out how <strong>Affluence Business Inc</strong> can help in ensuring the accuracy of your database, connect with our experts at <strong>307-213-7098</strong> for a free
                         one-on-one consultation, or email us at <a href="mailto:steve@affluencebizdata.com">steve@affluencebizdata.com</a></p>
                 </div>
                 <div class="col-lg-5 mb-4 wow fadeInRight">
@@ -96,7 +96,7 @@
                             <h4>REQUEST<br/> A CALL BACK NOW</h4>
                             <p>We have got you covered on all your email and direct marketing needs</p>
                             <div class="form">
-                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()"> <input type="hidden" name="returnURL" value=" "><input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
                                     <div class=" form-row">
                                         <div class="col-lg-6 form-group">
                                             <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -171,8 +171,8 @@
                                         </div>
                                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services provides impeccable <strong>data verification services</strong> to ensure that the database is scrupulous and B2B campaign ready. To avail <strong>data verification services</strong>,
-                                                    you may write to us at steve@affluencebizdata.com or call on 877 837- 4884 for more details.</p>
+                                                <p>Affluence Business Inc provides impeccable <strong>data verification services</strong> to ensure that the database is scrupulous and B2B campaign ready. To avail <strong>data verification services</strong>,
+                                                    you may write to us at steve@affluencebizdata.com or call on 307-213-7098 for more details.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -182,8 +182,8 @@
                                         </div>
                                         <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Span Global Services offers data verification services where in the validity of the databases is checked, to help you maintain a good sender reputation. It offers tele-verification, <strong>email verification</strong>                                                    and social verification to ensure that your databases are 100% accurate and responsive. To avail <strong>data verification services</strong>, you may write to us at steve@affluencebizdata.com or call
-                                                    on 877 837- 4884 for more details.</p>
+                                                <p>Affluence Business Inc offers data verification services where in the validity of the databases is checked, to help you maintain a good sender reputation. It offers tele-verification, <strong>email verification</strong>                                                    and social verification to ensure that your databases are 100% accurate and responsive. To avail <strong>data verification services</strong>, you may write to us at steve@affluencebizdata.com or call
+                                                    on 307-213-7098 for more details.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -208,7 +208,7 @@
                 <div class="col-lg-7 wow fadeInRight">
                     <div class="contact-quote">
                         <div class="form">
-                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Span Global Services"> <input name="redirect_url" type="hidden" value=" ">
+                            <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data"> <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc"> <input name="redirect_url" type="hidden" value=" ">
                                 <div class=" form-row">
                                     <div class="col-lg-6 form-group"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> </div>
                                     <div class="col-lg-6 form-group"> <input type="text" name="lname" class="form-control" id="lname" placeholder="Last Name*"> </div>
