--- a/templates/healthcare-lists/physician-email-list.html
+++ b/templates/healthcare-lists/physician-email-list.html
@@ -95,7 +95,7 @@
                                              action=" " method="post"
                                              onSubmit="return validationcon()"> <input type="hidden" name="returnURL"
                                                   value=" "><input name="title"
-                                                  type="hidden" value="Contact Request from Span Global Services">
+                                                  type="hidden" value="Contact Request from Affluence Business Inc">
                                              <div class=" form-row">
                                                   <div class="col-lg-6 form-group">
                                                        <div class="input-container"> <input type="text" name="fname"
@@ -283,7 +283,7 @@
                               src="/static/assets/img/healthcare-inner-sub.jpg"
                               class="respo-img" alt="Cardiologist Email List" /></div>
                     <div class="col-lg-6 mt-3 wow fadeInLeft">
-                         <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Doctor Email Lists
+                         <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Doctor Email Lists
                          </h2>
                          <p><img src="/static/assets/img/green-right.png" alt="Benefits"
                                    title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique
@@ -702,7 +702,7 @@
                                         onsubmit="return fnValidationContactside()"
                                         action=" "
                                         enctype="multipart/form-data"> <input name="subject" type="hidden"
-                                             value="Contact Details from Span Global Services"> <input
+                                             value="Contact Details from Affluence Business Inc"> <input
                                              name="redirect_url" type="hidden"
                                              value=" ">
                                         <div class=" form-row">
