--- a/templates/refund-policy.html
+++ b/templates/refund-policy.html
@@ -45,14 +45,14 @@ After obtaining your list, if bad data exceeds even by 8%, you will receive the 
 <!--                    <p class="small-font"><em>*All guarantee rates are specified in the work order and as such, this-->
 <!--                        refund policy will be applicable in accordance to it. All returned mails must be postmarked to-->
 <!--                        our address within 30 days of commencement of purchase. Each purchase allows for only one-->
-<!--                        refund. Lists purchased for fax and email purposes are not covered. Span Global Services-->
+<!--                        refund. Lists purchased for fax and email purposes are not covered. Affluence Business Inc-->
 <!--                        reserves the right to verify the validity of the purchase at all times. Maximum refund value-->
 <!--                        shall not exceed the original purchase value, including taxes. If the addressee refuses mail-->
 <!--                        pieces that contain the accurate address, such cases will not be entertained for the purpose of-->
-<!--                        refund. Exclusive coverage of the refund policy holds good for data from Span Global Services-->
+<!--                        refund. Exclusive coverage of the refund policy holds good for data from Affluence Business Inc-->
 <!--                        only. Lists that contain, in full or partial, data from third party or brokered data is not-->
 <!--                        covered under this policy The right to close this guarantee without notice rests exclusively-->
-<!--                        with Span Global Services.</em></p></div>-->
+<!--                        with Affluence Business Inc.</em></p></div>-->
                 <div class="clearfix"></div>
             </div>
         </div>
