--- a/templates/technology-lists/salesforce-crm-users-list.html
+++ b/templates/technology-lists/salesforce-crm-users-list.html
@@ -28,9 +28,9 @@
           <div class="col-lg-7 section-fpad wow fadeInLeft">
                <h2 class="subhead-small-blk">Promote Your Brand Notably with Our Accurate and Tele-Verified Salesforce Users Email List</h2>
 			   <p><strong>Some of the Companies that use Salesforce includes 3M, AMD, Informatica, Mylan, Pearson, and many more.</strong></p>
-			   <p align="justify">Procure highly credible <strong>Full List of Companies using Salesforce CRM</strong> from Span Global Services and launch your marketing campaigns effectively. Our team of dedicated marketing analysts consolidate a highly crystalized, accurate, and tele-verified list of company executives and top-level professionals who have the authority to respond to your sales campaigns. </p>
+			   <p align="justify">Procure highly credible <strong>Full List of Companies using Salesforce CRM</strong> from Affluence Business Inc and launch your marketing campaigns effectively. Our team of dedicated marketing analysts consolidate a highly crystalized, accurate, and tele-verified list of company executives and top-level professionals who have the authority to respond to your sales campaigns. </p>
 			   
-			   <p align="justify">Salesforce is a cloud-based CRM software that enables businesses to connect with their customer base. It allows organizations to keep track of customer and prospect contact information, uncover sales possibilities, track service issues, and manage marketing campaigns all in one place. Our team at Span Global Services possesses comprehensive <a href="/email-lists"><strong>email databases</strong></a> of global Salesforce CRM users that enables us to deliver the best optimized <strong>Salesforce Users Mailing List</strong>. </p>
+			   <p align="justify">Salesforce is a cloud-based CRM software that enables businesses to connect with their customer base. It allows organizations to keep track of customer and prospect contact information, uncover sales possibilities, track service issues, and manage marketing campaigns all in one place. Our team at Affluence Business Inc possesses comprehensive <a href="/email-lists"><strong>email databases</strong></a> of global Salesforce CRM users that enables us to deliver the best optimized <strong>Salesforce Users Mailing List</strong>. </p>
 				<p align="justify">
 					Access to a certain <strong>List of Companies that use Salesforce CRM</strong> is integral for standing out and getting noticed amongst some of the most successful data-driven organizations. Frequently refreshed and highly responsive, our <strong>Salesforce Clients List</strong> allows you to stay connected with top decision makers in the industry. 
 				</p>
@@ -83,7 +83,7 @@
 			
 		    <form name="f12" id="contact-form" action=" " method="post" onSubmit="return validationcon()" >
 			<input type="hidden" name="returnURL" value=" ">
-			<input name="title" type="hidden" value="Contact Request from Span Global Services">
+			<input name="title" type="hidden" value="Contact Request from Affluence Business Inc">
 
 
 			  <div class=" form-row">
@@ -525,7 +525,7 @@ var svgMapDataGPD = {
           <div class="col-lg-6 advantage-tech-list-bg wow fadeInRight"></div>
           <div class="col-lg-6 mb-4 wow fadeInLeft">
           	<div class="pad-sec">
-			  <h2 class="subhead-small-blk">Benefits of Procuring Span Global Services’ Salesforce Users List</h2> 
+			  <h2 class="subhead-small-blk">Benefits of Procuring Affluence Business Inc’ Salesforce Users List</h2>
 		  <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>200+ unique data attributes</strong> </p>
 		  
 		   <p><img src="/static/assets/img/green-right.png" alt="Benefits" title="" class="repo-img" style="width:30px;height:30px;">&nbsp;<strong>100% Data Refresh Every Quarter</strong></p>
@@ -554,7 +554,7 @@ var svgMapDataGPD = {
 		<div class="col-lg-6 mb-4 wow fadeInLeft">
 		
 			<h2 class="subhead-small-blk">Leverage Salesforce CRM Database to Create Profitable Marketing Campaigns</h2>
-			<p style="text-align:Justify;">Span Global Services are the leaders in steering the top B2B organizations towards a successful <a href="/"><strong>technology users database</strong></a>. Our <strong>Salesforce CRM Customers List</strong> is tactfully and thoughtfully designed to uplift your marketing strategy. Using our pre-verified and sophisticated list, you can reach the right audience at the right time. </p>
+			<p style="text-align:Justify;">Affluence Business Inc are the leaders in steering the top B2B organizations towards a successful <a href="/"><strong>technology users database</strong></a>. Our <strong>Salesforce CRM Customers List</strong> is tactfully and thoughtfully designed to uplift your marketing strategy. Using our pre-verified and sophisticated list, you can reach the right audience at the right time. </p>
 			<p style="text-align:Justify;">Precise and trustworthy database is what matters at the end that can increase your company’s ROI and conversion rates with minimal efforts. Hence avail our opt-in list and take control of your email, direct marketing, telemarketing and other online marketing campaigns.</p>
 		</div>
 		
@@ -578,7 +578,7 @@ var svgMapDataGPD = {
 		   
           	<h2 class="subhead-small-blk text-center">Work Across Geographies and Reach the Right Decision-makers</h2>
 			
-			<p style="text-align:Justify;">Span Global Services has more than <strong>200,000 contacts</strong> of salesforce CRM users and decision makers across the globe. With such a great <strong>Salesforce CRM Users Mailing List</strong>, you can&rsquo;t ever get stuck with your revenue building practices. Your marketing strategies will always find a way to get the most out of a successful <strong>Companies using Salesforce</strong>. Since, getting a higher multichannel campaign success and even higher ROI, and creating exciting marketing campaign opportunities is the aim of every marketer, the ones who are &nbsp;successful like to invest in responsive, targeted and 100% accurate <strong><a href="/b2b-email-list">business mailing list</a></strong>. For businesses wherein the highly innovative CRM software is the major product, you may promote your brands effectively with the Span Global Services permission-based <strong>Salesforce CRM Users List</strong>.</p>
+			<p style="text-align:Justify;">Affluence Business Inc has more than <strong>200,000 contacts</strong> of salesforce CRM users and decision makers across the globe. With such a great <strong>Salesforce CRM Users Mailing List</strong>, you can&rsquo;t ever get stuck with your revenue building practices. Your marketing strategies will always find a way to get the most out of a successful <strong>Companies using Salesforce</strong>. Since, getting a higher multichannel campaign success and even higher ROI, and creating exciting marketing campaign opportunities is the aim of every marketer, the ones who are &nbsp;successful like to invest in responsive, targeted and 100% accurate <strong><a href="/b2b-email-list">business mailing list</a></strong>. For businesses wherein the highly innovative CRM software is the major product, you may promote your brands effectively with the Affluence Business Inc permission-based <strong>Salesforce CRM Users List</strong>.</p>
 			
 			<p style="text-align:Justify;">A sophisticated platform like the Salesforce CRM captivates the attention of every marketer to establish a solid and bespoke brand presence. Your chance to build endearing business associations with top level Salesforce CRM users across global conglomerates gets a higher chance with <strong>Salesforce CRM Vendors Email List</strong>. We develop the most accurate data lists by referring globally legitimate sources, some of which are listed as follows: Business Directories, Government Lists, Trade Fairs, Yellow Pages, Seminars and Conferences, Online Subscriptions etc.</p>
 			<p style="text-align:Justify;">You can, therefore, be sure about the quality of our lists since they are drawn out from reliable sources. </p>
@@ -612,7 +612,7 @@ var svgMapDataGPD = {
             <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">With the verified, accurate, and reliable list of Salesforce users, our sales and marketing teams were able to focus their time and effort on the correct prospects based on technographics and firmographics with global reach; thanks to Span Global Services.<br><br> </p>
+  <p class="test-content">With the verified, accurate, and reliable list of Salesforce users, our sales and marketing teams were able to focus their time and effort on the correct prospects based on technographics and firmographics with global reach; thanks to Affluence Business Inc.<br><br> </p>
   <p class="test-name"><strong>Jess Hornbaek</strong> </p>
   <p class="test-desg">Director of Sales</p>
                     </div>
@@ -620,7 +620,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                   <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">Span Global Services enabled us to fully utilize the appropriate sales territories in order to identify untapped regions or verticals that need additional attention. The Salesforce users list they provided allowed us to reach the right targets and increase our revenue and growth.</p>
+  <p class="test-content">Affluence Business Inc enabled us to fully utilize the appropriate sales territories in order to identify untapped regions or verticals that need additional attention. The Salesforce users list they provided allowed us to reach the right targets and increase our revenue and growth.</p>
   <p class="test-name"><strong>Morten Frandsen</strong> </p>
   <p class="test-desg">Head of Digital Performance Marketing</p>
                     </div>
@@ -628,7 +628,7 @@ var svgMapDataGPD = {
                 <div class="col-lg-4 wow fadeInLeft text-center">
                     <div class="testi-box text-center">
  <img src="../assets/img/testimonial-quote.jpg" alt="testimonial"  class="respo-img">
-  <p class="test-content">With the robust Salesforce users mailing list from Span Global Services, we were able to obtain real-time data on technology usage, geographical location, buying intent signals, and hundreds of other account characteristics.<br><br> </p>
+  <p class="test-content">With the robust Salesforce users mailing list from Affluence Business Inc, we were able to obtain real-time data on technology usage, geographical location, buying intent signals, and hundreds of other account characteristics.<br><br> </p>
   <p class="test-name"><strong>Russel Jordan</strong></p>
   <p class="test-desg">Marketing Director</p>
                     </div>
@@ -762,7 +762,7 @@ var svgMapDataGPD = {
             <div class="contact-quote">
     <div class="form">
           <form method="post" name="contactside" class="contactForm" onsubmit="return fnValidationContactside()" action=" " enctype="multipart/form-data">
-            <input name="subject" type="hidden" value="Contact Details from Span Global Services">
+            <input name="subject" type="hidden" value="Contact Details from Affluence Business Inc">
             <input name="redirect_url" type="hidden" value=" ">
               <div class=" form-row">
               	<div class="col-lg-6 form-group">
